Rewrite introduction documentation

--- a/简介.md
+++ b/简介.md
@@ -1,73 +1,74 @@
 # clitheme简介
 
-`clitheme`是一个主要面向命令行应用程序的文本主题/自定义框架。它允许你修改和自定义命令行应用程序的提示和输出；只要应用程序适配了这个框架就可以。通过编写**主题定义文件**，你可以给你最喜爱的应用程序添加你想要的风格和个性。无论是把它们变得活泼可爱，模拟二次元角色的语句，甚至只是添加多语言支持，`clitheme`允许你自由发挥你的想象，把你的命令行环境变成你想要的样子。
-
-**这些文档适配`clitheme`的`v1.1`版本。**
+`clitheme`允许你通过输出替换规则来自定义任何命令行应用程序的终端输出。通过编写**主题定义文件**，你可以给你最喜爱的应用程序添加你想要的风格和个性。无论是把它们变得活泼可爱，模拟二次元角色的语句，甚至只是添加多语言支持，`clitheme`允许你自由发挥你的想象，把你的命令行环境变成你想要的样子。
 
 ## 样例
 
-比如说，这是一个帮你安装文件的一个小工具，它的输出是长这样子的：
+比如说，你在使用`clang`编译器，它的错误提示输出是长这样的：
 
 ```plaintext
-$ example-app install-files
-在当前目录找到了2个文件
--> 正在安装 "example-file"...
--> 正在安装 "example-file-2"...
-已成功安装2个文件
-$ example-app install-file foo-nonexist
-错误：找不到文件 "foo-nonexist"
+$ clang test.c
+test.c:1:1: error: unknown type name 'bool'
+bool *haku(int *a) {
+^
+test.c:4:3: warning: incompatible pointer types assigning to 'char *' from 'int *' [-Wincompatible-pointer-types]
+        b=a;
+         ^~
+2 errors generated.
 ```
 
-是不是觉得有一点太平淡无趣了？没关系，我们可以把它的输出变得活泼可爱一点。只需要参考这个工具的相关文档，编写一个主题定义文件，里面加上你想要的语句输出就可以了：
+是不是觉得有一点太平淡无趣了？没关系，我们可以把它的输出变得活泼可爱一点。只需要根据输出内容编写一个主题定义文件，里面加上你想要的语句输出就可以了：
 
 ```plaintext
-begin_header
-    name 样例主题
-    version 1.0
-    locales zh_CN
-end_header
+{header_section}
+    name clang样例主题
+    [description]
+        一个为clang打造的的样例主题，为了演示作用
+    [/description]
+{/header_section}
 
-begin_main
-    in_domainapp com.example example-app
-        entry found-file
-            locale default o(≧v≦)o 太好了，在当前目录找到了{}个文件！
-            locale zh_CN o(≧v≦)o 太好了，在当前目录找到了{}个文件！
-        end_entry
-        entry installing-file
-            locale default (>^ω^<) 正在安装 "{}"...
-            locale zh_CN (>^ω^<) 正在安装 "{}"...
-        end_entry
-        entry install-success
-            locale default o(≧v≦)o 已成功安装{}个文件！
-            locale zh_CN o(≧v≦)o 已成功安装{}个文件！
-        end_entry
-        entry file-not-found
-            locale default ಥ_ಥ 糟糕，出错啦！找不到文件 "{}"
-            locale zh_CN ಥ_ಥ 糟糕，出错啦！找不到文件 "{}"
-        end_entry
-end_main
+{substrules_section}
+    # 设定"substesc"选项：内容中的"{{ESC}}"字样会被替换成ASCII Escape终端控制符号
+    set_options substesc
+    [filter_commands]
+        clang
+        clang++
+        gcc
+        g++
+    [/filter_commands]
+    # clang的输出包含用于设定字体颜色的终端控制字符：请使用"clitheme-exec --debug-showchars clang test.c"以显示它们
+    [substitute_regex] (?P<prefix>^({{ESC}}.*?m)*(.+:\d+:\d+:) ({{ESC}}.*?m)*)warning: (?P<esc>({{ESC}}.*?m)*)incompatible pointer types assigning to '(?P<name1>.+)' from '(?P<name2>.+)'
+        locale:default \g<prefix>杂鱼～: \g<esc>'\g<name1>'从不兼容的指针类型赋值为'\g<name2>',纯爱战神很生气！
+    [/substitute_regex]
+    [substitute_regex] (?P<prefix>^({{ESC}}.*?m)*(.+:\d+:\d+:) ({{ESC}}.*?m)*)error: (?P<esc>({{ESC}}.*?m)*)unknown type name '(?P<type>.+)'
+        locale:default \g<prefix>笨蛋！: \g<esc>未知的类型名'\g<type>',是忘了定义了吗喵？
+    [/substitute_regex]
+{/substrules_section}
 ```
 
 相比之前是不是变可爱了很多？接下来，我们通过`clitheme`的命令行工具来应用一下这个主题：
 
 ```plaintext
-$ clitheme apply-theme example-app-theme_clithemedef.txt
+$ clitheme apply-theme clang-theme_clithemedef.txt
 ==> Generating data...
 Successfully generated data
 ==> Applying theme...Success
 Theme applied successfully
 ```
 
-现在，这个主题已经应用在你的电脑中了。对应的应用程序可以访问并且显示你写的自定义字符串，从而达到自定义输出的效果。我们再运行一下这个小工具：
+现在，这个主题已经应用在你的电脑中了。你可以通过`clitheme-exec`运行命令来对输出实施这些替换规则，从而达到自定义输出的效果：
 
 ```plaintext
-$ example-app install-files
-o(≧v≦)o 太好了，在当前目录找到了2个文件！
-(>^ω^<) 正在安装 "example-file"...
-(>^ω^<) 正在安装 "example-file-2:"...
-o(≧v≦)o 已成功安装2个文件！
-$ example-app install-file foo-nonexist
-ಥ_ಥ 糟糕，出错啦！找不到文件 "foo-nonexist"
+$ clitheme-exec clang test.c
+test.c:1:1: 杂鱼～: 未知的类型名'bool',是忘了定义了吗喵？
+bool *haku(int *a) {
+^
+test.c:4:3: 笨蛋！: 'char *'从不兼容的指针类型赋值为'int *',纯爱战神很生气！ [-Wincompatible-pointer-types]
+        b=a;
+         ^~
+2 errors generated.
 ```
 
-我们可以看到这个工具输出了你自定义的字符串，变成了你想要的样子。关于编写主题定义文件的更多信息，请参考Wiki文章[**编写主题定义文件/基本用法**](编写主题定义文件/基本用法.md)。
+我们可以看到该程序的输出变成了你想要的样子，根据定义的替换规则被修改。
+
+关于编写主题定义文件的更多信息，请参考[命令行输出替换/编写定义文件.md](命令行输出替换/编写定义文件.md)。
