--- a/命令行输出替换/样例教程.md
+++ b/命令行输出替换/样例教程.md
@@ -8,12 +8,12 @@
 
 ## 1. 获取应用程序的输出
 
-假如说我们想要自定义`clang`编译器中的一个错误提示。如果我们的测试文件时`test.c`，我们可以使用`clitheme-exec --debug-showchars clang test.c`来获取包含终端控制符号的输出。编写匹配规则时需要考虑到这些终端控制符号；这是为什么我们要获取**包含终端控制符号**的输出。
+假如说我们想要自定义`clang`编译器中的一个错误提示。如果我们的测试文件时`test.c`，我们可以使用`clitheme-exec --debug-showchars clang test.c`来获取包含终端控制符号的输出。编写匹配规则时需要考虑到这些终端控制符号；这是为什么我们要获取**包含终端控制符号**的输出。你也可以使用`--debug-nosubst`来获取未替换过的输出，如果你已经设定了主题。
 
 注意：`--debug-showchars`和任何debug选项必须放在`clang test.c`的前面，否则要执行的命令将会被认为`clang test.c --debug-showchars`。
 
 ```plaintext
-$ clitheme-exec --debug-showchars clang test.c
+$ clitheme-exec --debug-showchars --debug-nosubst clang test.c
 {{ESC}}[1mtest.c:1:1: {{ESC}}[0m{{ESC}}[0;1;31merror: {{ESC}}[0m{{ESC}}[1munknown type name 'bool'{{ESC}}[0m\r\n
 bool *haku(int *a) {\r\n
 {{ESC}}[0;1;32m^\r\n
