Add number labels to files

--- a/命令行输出替换/3. 样例教程.md
+++ b/命令行输出替换/3. 样例教程.md
@@ -2,7 +2,7 @@
 
 本文章将展示命令行输出替换的一个样例，包含使用`clitheme-exec --debug-showchars`获取所需的输出和为输出编写替换规则。
 
-浏览本文章前，请先阅读[编写定义文件](编写定义文件.md)和[使用clitheme-exec](使用clitheme-exec.md)。
+浏览本文章前，请先阅读[编写定义文件](1.%20编写定义文件.md)和[使用clitheme-exec](2.%20使用clitheme-exec.md)。
 
 本文章中的部分内容来自于`kawaii-gcc`项目。项目地址：https://github.com/Bill-Haku/kawaii-gcc
 
