--- a/主题定义文件通用语法/多行内容段落.md
+++ b/主题定义文件通用语法/多行内容段落.md
@@ -9,7 +9,7 @@
 你可以在以下文章中找到对于每一个定义段落中，可以在哪些定义使用多行内容段落的信息：
 
 - `header`：[header段落](header段落.md)
-- `substrules`：[命令行输出替换/编写定义文件](../命令行输出替换/编写定义文件.md)
+- `substrules`：[命令行输出替换/编写定义文件](../命令行输出替换/1.%20编写定义文件.md)
 - `entries`：[编写主题定义文件/多行内容段落](../编写主题定义文件/多行内容段落.md)
 
 ## 在内容中输入结束语句
