--- a/应用程序适配/3. 使用frontend模块.md
+++ b/应用程序适配/3. 使用frontend模块.md
@@ -25,7 +25,7 @@ f = frontend.FetchDescriptor( \
 `FetchDescriptor`支持以下参数：
 
 - `domain_name`，`app_name`，`subsections`：指定开发者名称，应用名称，和子路径；调用功能时会自动添加到路径中
-- `lang`：指定并且覆盖`clitheme`检测到的系统语言信息（详见[**多语言支持**](../主题定义文件通用语法/多语言支持.md)），并且使用该参数定义的语言信息（如`zh_CN`，`en_US`，`en_US.UTF-8`等）
+- `lang`：指定并且覆盖`clitheme`检测到的系统语言信息（详见[**多语言支持**](../附录：主题定义文件通用语法/多语言支持.md)），并且使用该参数定义的语言信息（如`zh_CN`，`en_US`，`en_US.UTF-8`等）
     - 你可以指定多个语言；只要用空格分开即可（如`en_US zh_CN`）。获取字符串时会按照顺序依次尝试获取对应语言的字符串定义。
 - `debug_mode`：如果设置为`True`，调用功能时会输出更多信息，用于调试作用
 - `disable_lang`：如果设置为`True`，将会禁用自动语言检测，并且调用功能时将会永远使用当前主题定义中的`default`条目。
@@ -43,7 +43,7 @@ f.disable_lang=True
 
 如需获取当前主题定义的某个字符串，请使用`FetchDescriptor`中的`retrieve_entry_or_fallback`函数。调用时需要提供路径名称和默认字符串。如果当前主题设定没有适配该字符串，则该函数会返回提供的默认字符串。你可以将这个函数调用包括在一个`print`语句中，以输出返回的结果。
 
-该函数会读取系统上的语言设置（详见[**多语言支持**](../主题定义文件通用语法/多语言支持.md)），并且会优先返回主题定义中对应语言的字符串。该行为可以在创建`FetchDescriptor`时禁用（详见上面）。
+该函数会读取系统上的语言设置（详见[**多语言支持**](../附录：主题定义文件通用语法/多语言支持.md)），并且会优先返回主题定义中对应语言的字符串。该行为可以在创建`FetchDescriptor`时禁用（详见上面）。
 
 你也可以使用更简短的`reof`函数定义以减少代码量。
 
