Add reference to manpages in block input doc

--- a/附录：主题定义文件通用语法/多行内容段落.md
+++ b/附录：主题定义文件通用语法/多行内容段落.md
@@ -11,6 +11,7 @@
 - `header`：[header段落](header段落.md)
 - `substrules`：[命令行输出替换/编写定义文件](../命令行输出替换/1.%20编写定义文件.md)
 - `entries`：[编写主题定义文件/多行内容段落](../编写主题定义文件/多行内容段落.md)
+- `manpages`： [自定义manpage文档/编写定义文件](../自定义manpage文档/1.%20编写定义文件.md)
 
 ## 在内容中输入结束语句
 
@@ -30,7 +31,7 @@
 
 **注意：** 多行内容段落中的结尾空格将会被忽略。
 
-但是，起始空格和whitespace会被减去多行内容段落内容内的共同whitespace大小（tab符号将会被视为8个空格）。这意味着行数之间的缩进差距将会被保留。如果你想要在所有的行之前都加上一定大小的whitespace，你可以在结束语句之后添加`leadtabs:<n>`或`leadspaces:<n>`；前者会添加`<n>`个缩进（Tab）符号，后者会添加`<n>`个空格。
+但是，起始空格和whitespace会被减去多行内容段落内容内的共同空格大小（tab符号将会被视为8个空格）。这意味着行数之间的缩进差距将会被保留。如果你想要在所有的行之前都加上一定大小的空格，你可以在结束语句之后添加`leadtabs:<n>`或`leadspaces:<n>`；前者会添加`<n>`个缩进（Tab）符号，后者会添加`<n>`个空格。
 
 你也可以使用`set_options`来对之后定义的所有段落应用这些选项，如`set_options leadtabs:1`或`set_options leadspaces:4`。详细请见[可以设定的选项](./可以设定的选项.md)。
 
