Move frontend API documentation into one folder

--- a/应用程序和字符串定义API/编写主题定义文件/多行内容段落.md
+++ b/应用程序和字符串定义API/编写主题定义文件/多行内容段落.md
@@ -6,7 +6,7 @@
 
 ## header段落
 
-请见[附录：主题定义文件通用语法/header段落](../附录：主题定义文件通用语法/header段落.md)。
+请见[附录：主题定义文件通用语法/header段落](../../附录：主题定义文件通用语法/header段落.md)。
 
 ## entries段落
 
@@ -39,4 +39,4 @@ A new line
 
 ## 更多信息
 
-更多信息请见[附录：主题定义文件通用语法/多行内容段落](../附录：主题定义文件通用语法/多行内容段落.md)。
+更多信息请见[附录：主题定义文件通用语法/多行内容段落](../../附录：主题定义文件通用语法/多行内容段落.md)。
