--- a/附录：clitheme命令行工具的字符串定义/数据生成器提示信息.md
+++ b/附录：clitheme命令行工具的字符串定义/数据生成器提示信息.md
@@ -128,7 +128,7 @@ Syntax error: Unexpected "phrase" on line 4
 
 ## 名称不合规提示
 
-数据生成器会对文件内的路径名称进行检查，以确保文件中没有不合规的名称。详见[应用程序适配/路径名称和数据结构](../应用程序适配/1.%20路径名称和数据结构.md)中的**注意事项**。
+数据生成器会对文件内的路径名称进行检查，以确保文件中没有不合规的名称。详见[应用程序和字符串定义API/应用程序适配/路径名称和数据结构](../应用程序和字符串定义API/应用程序适配/1.%20路径名称和数据结构.md)中的**注意事项**。
 
 所有相关的提示信息都会通过`sanity-check-entry-err`，`sanity-check-domainapp-err`，或`sanity-check-subsection-err`中的`{sanitycheck_msg}`显示。
 
