--- a/附录：主题定义文件通用语法/多语言支持.md
+++ b/附录：主题定义文件通用语法/多语言支持.md
@@ -24,7 +24,7 @@ LC_ALL=
 
 你可以为一个字符串定义和命令行输出替换规则添加多个语言版本。`clitheme`会根据系统语言或者应用程序的语言设定自动选择相应的定义。
 
-关于更多信息，请参考[**编写主题定义文件/基本用法**](../编写主题定义文件/基本用法.md)中的**使用`entry`段落**。
+关于更多信息，请参考[**应用程序和字符串定义API/编写主题定义文件/基本用法**](../应用程序和字符串定义API/编写主题定义文件/基本用法.md)中的**使用`entry`段落**。
 
 定义时建议添加`default`语言。如果该定义不支持当前的系统语言，会使用`default`语言定义。如果`default`语言没有被定义，只会在该定义支持当前系统语言的情况下才会被调用。
 
