--- a/附录：主题定义文件通用语法/多行内容段落.md
+++ b/附录：主题定义文件通用语法/多行内容段落.md
@@ -10,7 +10,7 @@
 
 - `header`：[header段落](header段落.md)
 - `substrules`：[命令行输出替换/编写定义文件](../命令行输出替换/1.%20编写定义文件.md)
-- `entries`：[编写主题定义文件/多行内容段落](../编写主题定义文件/多行内容段落.md)
+- `entries`：[应用程序和字符串定义API/编写主题定义文件/多行内容段落](../应用程序和字符串定义API/编写主题定义文件/多行内容段落.md)
 - `manpages`： [自定义manpage文档/编写定义文件](../自定义manpage文档/1.%20编写定义文件.md)
 
 ## 在内容中输入结束语句
