Change main section to entries section

--- a/应用程序和字符串定义API/编写主题定义文件/基本用法.md
+++ b/应用程序和字符串定义API/编写主题定义文件/基本用法.md
@@ -59,9 +59,9 @@
 
 ## 编写字符串定义
 
-### 使用`main`段落
+### 使用`entries`段落
 
-所有的字符串定义会被包括在`main`段落中。请使用和`header`段落相同的格式定义`main`段落：
+所有的字符串定义会被包括在`entries`段落中。请使用和`header`段落相同的格式定义`entries`段落：
 
     {entries_section}
         <...>
@@ -82,7 +82,7 @@
 下面将展示一个样例：
 
 ```plaintext
-# 在main段落中（{entries_section}）
+# 在entries段落中（{entries_section}）
 [entry] com.example example-app text-one
     locale:default Some text
     locale:en_US Some text
@@ -103,7 +103,7 @@
 **注意：** 使用`in_domainapp`和`unset_domainapp`时会同时取消定义之前设定的`in_subsection`信息。
 
 ```plaintext
-# 在main段落中（{entries_section}）
+# 在entries段落中（{entries_section}）
 in_domainapp com.example example-app
     # 和 com.example example-app entry-one 相同
     [entry] entry-one
