Fix naming for block input

--- a/附录：主题定义文件通用语法/可以设定的选项.md
+++ b/附录：主题定义文件通用语法/可以设定的选项.md
@@ -40,12 +40,12 @@
 
 ### 多行内容段落缩进/空格设定
 
-以下几个设定适用于多行内容段落（`header`段落仅支持`[description]`段落）：
+以下几个设定仅适用于多行内容段落（`header`段落仅支持`[description]`段落）：
 
 以下设定中的`<n>`应该输入一个整数数字，并且选项名称与数值之间不能有空格。比如：`leadspaces:4`
 
-- `leadtabindents:<n>`：多行输入中为每一行的开始添加`<n>`个tab缩进
-- `leadspaces:<n>`：多行输入中为每一行的开始添加`<n>`个空格
+- `leadtabindents:<n>`：多行内容段落中为每一行的开始添加`<n>`个tab缩进
+- `leadspaces:<n>`：多行内容段落中为每一行的开始添加`<n>`个空格
 
 #### 样例：
 
