Add match timeout information

--- a/命令行输出替换/1. 编写定义文件.md
+++ b/命令行输出替换/1. 编写定义文件.md
@@ -172,5 +172,7 @@ set_options normalcmdmatch
     2. 带有命令限制条件的匹配规则
         - 命令语句最多的将会被优先执行（从多到少）
     3. 没有命令限制条件的匹配规则
+    - **这意味着你可以通过多个替换规则来更改/替换一行的输出**
+- 如果执行替换规则的时间超过**0.4秒**，则会视为超时，并且会输出未处理过的内容
 - 不需要匹配一行中的所有内容；你可以仅匹配和替换一行中的部分内容
 - 如果匹配规则的匹配文本/表达式、命令限制条件、和stdout/stderr限制设定于之前的规则相同，将被视为重复规则，并且新的定义会覆盖旧的
