Add information on specifying multiple entry names at once

--- a/命令行输出替换/1. 编写定义文件.md
+++ b/命令行输出替换/1. 编写定义文件.md
@@ -71,7 +71,41 @@
 - `subststderronly`：仅匹配standard error的输出内容
 - `substall`：默认设定；用于重置之前设定；匹配所有内容
 
-更多可以设定的选项请见[可以设定的选项](../附录：主题定义文件通用语法/可以设定的选项.md)。
+更多信息以及可以设定的选项请见[可以设定的选项](../附录：主题定义文件通用语法/可以设定的选项.md)。
+
+### 同时指定多个匹配表达式
+
+在替换内容基本相同的情况下，你可以为一个规则定义同时指定多个匹配表达式。该功能可以免去对替换内容和定义段落的重复复制粘贴，并且修改替换内容会简单很多。如需使用，请同时指定多个`[substitute_string]`或`[substitute_regex]`语句。
+
+**注意：** 不能同时指定`[substitute_string]`或`[substitute_regex]`语句（两者不能在同一个规则定义中混用）
+
+样例：
+
+```plaintext
+{substrules_section}
+    [substitute_string] Some text 1
+    [substitute_string] Some another text
+    [substitute_string] Some text 2
+        locale:default Some substitution text
+    [/substitute_string]
+    # 上方定义等于以下定义：
+    [substitute_string] Some text 1
+        locale:default Some substitution text
+    [/substitute_string]
+    [substitute_string] Some text 2
+        locale:default Some substitution text
+    [/substitute_string]
+    [substitute_string] Some another text
+        locale:default Some substitution text
+    [/substitute_string]
+
+    # 错误语法（两者不能混用）：
+    [substitute_string] Some text 1
+    [substitute_regex] Some regex 1
+        locale:default Some substitution text
+    [/substitute_string]
+{/substrules_section}
+```
 
 ### 样例
 
