--- a/应用程序和字符串定义API/编写主题定义文件/基本用法.md
+++ b/应用程序和字符串定义API/编写主题定义文件/基本用法.md
@@ -82,12 +82,14 @@
 下面将展示一个样例：
 
 ```plaintext
-# 在entries段落中（{entries_section}）
-[entry] com.example example-app text-one
-    locale:default Some text
-    locale:en_US Some text
-    locale:zh_CN 一些文本
-[/entry]
+{entries_section}
+    # ...
+    [entry] com.example example-app text-one
+        locale:default Some text
+        locale:en_US Some text
+        locale:zh_CN 一些文本
+    [/entry]
+{/entries_section}
 ```
 
 ### 使用`in_domainapp`和`in_subsection`
@@ -103,26 +105,51 @@
 **注意：** 使用`in_domainapp`和`unset_domainapp`时会同时取消定义之前设定的`in_subsection`信息。
 
 ```plaintext
-# 在entries段落中（{entries_section}）
-in_domainapp com.example example-app
-    # 和 com.example example-app entry-one 相同
+{entries_section}
+    in_domainapp com.example example-app
+        # 和 com.example example-app entry-one 相同
+        [entry] entry-one
+            locale:default Some text
+        [/entry]
+
+        in_subsection subsection-one subsection-two
+            # 和 com.example example-app subsection-one subsection-two entry-two 相同
+            [entry] entry-two
+                locale:default Some text
+            [/entry]
+
+        in_subsection subsection-three
+            # 和 com.example example-app subsection-three entry-three 相同
+            [entry] entry-three
+                locale:default Some text
+            [/entry]
+    # 会同时取消定义subsection
+    unset_domainapp
+{/entries_section}
+```
+
+### 同时指定多个路径名称
+
+在字符串定义内容相同的情况下，你可以为一个字符串定义添加多个路径名称。该功能可以免去对替换内容和定义段落的重复复制粘贴，并且修改替换内容会简单很多。如需使用，请同时指定多个`[entry]`语句，比如：
+
+```plaintext
+{entries_section}
     [entry] entry-one
-        locale:default Some text
+    [entry] another-entry
+    [entry] entry-three
+        locale:default Some string definition content
     [/entry]
-
-    in_subsection subsection-one subsection-two
-        # 和 com.example example-app subsection-one subsection-two entry-two 相同
-        [entry] entry-two
-            locale:default Some text
-        [/entry]
-
-    in_subsection subsection-three
-        # 和 com.example example-app subsection-three entry-three 相同
-        [entry] entry-three
-            locale:default Some text
-        [/entry]
-# 会同时取消定义subsection
-unset_domainapp
+    # 上方定义等于以下定义：
+    [entry] entry-one
+        locale:default Some string definition content
+    [/entry]
+    [entry] another-entry
+        locale:default Some string definition content
+    [/entry]
+    [entry] entry-three
+        locale:default Some string definition content
+    [/entry]
+{/entries_section}
 ```
 
 ### 样例
