Remove extra "Coming soon" statement

--- a/应用程序和字符串定义API/应用程序适配/3. 使用frontend模块.md
+++ b/应用程序和字符串定义API/应用程序适配/3. 使用frontend模块.md
@@ -1,6 +1,6 @@
 # 使用clitheme的frontend模块
 
-为了帮助开发者更方便的添加`clitheme`的适配，本项目提供了一个frontend模块。这个模块包含了抓取当前主题中字符串的功能；只需要调用一个函数就可以了。除此之外，frontend还包括了其他的功能，比如检查当前的主题有没有适配请求的字符串。我打算将在后续版本中添加更多的功能，敬请期待。
+为了帮助开发者更方便的添加`clitheme`的适配，本项目提供了一个frontend模块。这个模块包含了抓取当前主题中字符串的功能；只需要调用一个函数就可以了。除此之外，frontend还包括了其他的功能，比如检查当前的主题有没有适配请求的字符串。
 
 **注意：** 目前frontend模块只支持使用Python 3编写的应用程序；其他语言编写的程序需要自行访问数据结构。如需更多信息，请见[**路径名称和数据结构**](1.%20路径名称和数据结构.md)。
 
