Small fix in version information doc

--- a/关于版本的重要信息.md
+++ b/关于版本的重要信息.md
@@ -11,7 +11,7 @@
 
 这个版本信息会被储存在仓库中的`src/clitheme/_version.py`中，并且会在新的发行版中包括此版本号。
 
-**注意：** 因为Arch Linux软件包的版本命名限制，版本号中的`-`会被`_`替代（如`a.b_rX`）。
+**注意：** 因为Arch Linux软件包的版本命名限制，版本号中的`-`会被`_`替代（如`a.b_devYYYYMMDD`）。
 
 ## 代码仓库分支
 
