Add small note on $LANG variable information

--- a/附录：主题定义文件通用语法/多语言支持.md
+++ b/附录：主题定义文件通用语法/多语言支持.md
@@ -93,6 +93,7 @@ f4=frontend.FetchDescriptor(disable_lang=True)
 
 - `$LANGUAGE`（多个语言将会被顺序读取，按照该顺序进行字符串定义获取操作）
     - `en_US`和`en`将会被忽略（详细请见[本文章](https://wiki.archlinuxcn.org/wiki/Locale#LANGUAGE：后备区域设置)）
+    - `$LANG`设定为`C`时，**该变量将不会被读取**
 - `$LC_ALL`
 - `$LANG`
 
