Make availability of substvar clearer

--- a/附录：主题定义文件通用语法/内容变量.md
+++ b/附录：主题定义文件通用语法/内容变量.md
@@ -36,7 +36,7 @@ set_options substvar
 {/header_section}
 ```
 
-需要注意的是，变量只能在**可以输入内容**的地方使用，不能替代语法定义。这意味着你不能使用以下语法：
+需要注意的是，变量不能替代语法定义。这意味着你不能使用以下语法：
 
 ```plaintext
 set_options substvar
@@ -48,6 +48,8 @@ setvar:place2 version
     {{place2}} 9.1
 {/header_section}
 ```
+
+这意味着内容变量可以在任何**不是语法词语**的地方使用。
 
 **注意：** 如果变量内容中带有`{{ESC}}`字样，且`substesc`选项是设定的，变量内容中的`{{ESC}}`在定义时不会被处理；只会在相应地方和定义使用中才会被处理。
 
