--- a/命令行输出替换/1. 编写定义文件.md
+++ b/命令行输出替换/1. 编写定义文件.md
@@ -57,7 +57,7 @@
         - 更多信息请见[多语言支持](../附录：主题定义文件通用语法/多语言支持.md)
     - 替换内容可以是多行的；详见[多行内容段落](../附录：主题定义文件通用语法/多行内容段落.md)
 - 如果替换的内容只有一行，你可以使用`locale:<系统语言>`并且在后面加上替换的内容。这样子写起来会更便捷
-    - 注意：不能同时指定多个系统语言
+    - 注意：不能同时指定多个系统语言，并且不支持在此语法中使用变量替换（`substvar`；详见[可以设定的选项](../附录：主题定义文件通用语法/可以设定的选项.md)），如`locale:{{some_var}}`将不会把`{{some_var}}`替换成对应变量的内容
 - 如果匹配的内容之间有任何终端控制字符，匹配内容中必须包括它。你可以使用`clitheme-exec --debug-showchars`在终端输出中以绿色颜色显示这些字符（详见[使用clitheme-exec](2.%20使用clitheme-exec.md)）。如需引用ANSI Escape字符（`{{ESC}}`），请在前面添加`set_options substesc`（详见[可以设定的选项](../附录：主题定义文件通用语法/可以设定的选项.md)）并且在内容中使用`{{ESC}}`。**如需引用其他字符（如`\x08`、`\x07`等），你必须使用正则表达式替换（`[substitute_regex]`）。**
 - 以`#`开头的行是注释；它们必须定义在新的一行上
 
