--- a/附录：主题定义文件通用语法/可以设定的选项.md
+++ b/附录：主题定义文件通用语法/可以设定的选项.md
@@ -6,7 +6,7 @@
 
 你可以使用`set_options <选项>`语法来设定选项。你可以同时指定多个选项设定；只需要使用空格分开即可。设定后，这些选项将会被应用在该语句之后的相关定义。比如：`set_options substesc substvar leadtabs:1`
 
-你也可以对单个定义设定这些选项；只需要在它们的结束语句之后添加这些选项设定就可以了。这些设定会覆盖之前通过`set_options`设定的选项设置。比如说：`[/substitute_regex] subststdoutonly substesc leadspaces:4`
+你也可以对单个定义设定这些选项；只需要在它们的结束语句之后添加这些选项设定就可以了。这些设定会覆盖之前通过`set_options`设定的选项设置。比如说：`[/substitute_regex] subststdoutonly endmatchhere`或`[/locale] substesc substvar leadtabs:1`
 
 ```plaintext
 {substrules_section}
