--- a/附录：主题定义文件通用语法/可以设定的选项.md
+++ b/附录：主题定义文件通用语法/可以设定的选项.md
@@ -81,8 +81,9 @@
 - `strictcmdmatch`：用户输入的命令内容必须匹配命令匹配条件的开始（和默认的匹配参数不同）；比如说用户输入的`command --get-operation thing`在这个模式下会匹配到`command --get-operation thing --another`，但是不会匹配到`command --another thing --get-operation`
 - `exactcmdmatch`：用户输入的命令必须与匹配条件完全相同；比如说用户输入的`command --get-operations --strict`会匹配到`command --get-operations --strict`，但是不会匹配到`command --get-operations`
     - 带有此选项的命令匹配条件拥有最高的匹配规则执行优先级
-- `smartcmdmatch`：处理命令匹配条件时，把一个`-`开头的命令选项拆分成单个选项（e.g. `-rfc`处理时会被视为`-r -f -c`）；比如说用户输入的`rm -rf folder`会匹配到`rm -r`和`rm -f`
+- `smartcmdmatch`：处理命令匹配条件时，把一个`-`开头的命令选项拆分成单个选项（e.g. `-rfc`处理时会被视为`-r -f -c`）；比如说用户输入的`rm -rf folder`会匹配到`rm -r`和`rm -f`，并且用户输入的`rm -r -f folder`会匹配到`rm -rf`。
     - 单个`-`之后的字符（无论字母和数字）都会被这样处理
+    - 起始与多个横杠的语句（`--`）将不会被这样处理
 - `normalcmdmatch`：**默认设定；用于重置之前设定**；用户输入的命令中的语句需要包含匹配条件中的语句（e.g. `example-app --this --that`会匹配`example-app --that`匹配条件）
 ---
 以下几个选项仅适用于`[substitute_string]`和`[substitute_regex]`语法：
