Add notice that newline characters can't be used in match expression

--- a/命令行输出替换/1. 编写定义文件.md
+++ b/命令行输出替换/1. 编写定义文件.md
@@ -20,7 +20,7 @@
 
 替换规则分为两种：**字符串替换**和**正则表达式**替换。前者会匹配完全相同的输出文本和字符，后者会根据正则表达式中的规则匹配输出文本。
 
-**请注意：**目前仅支持匹配单行的输出，不支持匹配多行输出。不需要匹配一行中的所有内容；你可以仅匹配和替换一行中的部分内容。
+**请注意：**目前仅支持匹配单行的输出，不支持匹配多行输出（这意味着**不要在匹配正则表达式中使用`\n`等换行符号**）。不需要匹配一行中的所有内容；你可以仅匹配和替换一行中的部分内容。
 
 ### 字符串和正则表达式替换：`substitute_string`和`substitute_regex`
 
