Add text encoding information

--- a/附录：主题定义文件通用语法/文件格式和语法.md
+++ b/附录：主题定义文件通用语法/文件格式和语法.md
@@ -37,3 +37,7 @@
 ## 文件扩展名
 
 虽然`clitheme`在文件扩展名上没有要求，但是最好将文件的扩展名定义为`.clithemedef.txt`。这样子你可以更好的辨识文件，并且使用`.txt`会确保该文件会被系统使用正确的应用程序（如文本编辑器）打开。
+
+## 文件内容编码
+
+所有定义文件的内容必须使用 **`UTF-8`** 编码。这一点尤其在Windows系统上非常重要，因为有一些文本编辑器会使用系统默认的 **`GBK`** 编码保存文件。如果遇到内容乱码等情况，请尝试使用文本转换工具把文件转换成 **`UTF-8`** 编码。
