Rename clitheme_demo to frontend_demo & clitheme_fallback to frontend_fallback

--- a/应用程序和字符串定义API/应用程序适配/3. 使用frontend模块.md
+++ b/应用程序和字符串定义API/应用程序适配/3. 使用frontend模块.md
@@ -124,16 +124,16 @@ f3=frontend.FetchDescriptor(debug_mode=True)
 
 你可以在你的项目中内置本项目提供的fallback模块，以便更好的处理`clitheme`模块不存在时的情况。该fallback模块包括了frontend模块中的所有定义和功能，并且会永远返回失败时的默认值（fallback）。
 
-如需使用，请在你的项目文件中导入仓库中的`clitheme_fallback.py`文件，并且在你的程序中包括以下代码：
+如需使用，请在你的项目文件中导入仓库中的`frontend_fallback.py`文件，并且在你的程序中包括以下代码：
 
 ```py
 try:
     from clitheme import frontend
 except (ModuleNotFoundError, ImportError):
-    import clitheme_fallback as frontend
+    import frontend_fallback as frontend
 ```
 本项目提供的fallback文件会随版本更新而更改，所以请定期往你的项目里导入最新的fallback文件以获得最新的功能。
 
 ## 样例
 
-如需关于使用frontend模块的样例，请参考本仓库中的`clitheme_demo.py`文件。
+如需关于使用frontend模块的样例，请参考本仓库中的`frontend_demo.py`文件。
