Add `foregroundonly` and `--debug-foreground` option descriptions

--- a/命令行输出替换/2. 使用clitheme-exec.md
+++ b/命令行输出替换/2. 使用clitheme-exec.md
@@ -61,6 +61,10 @@ $ sudo clitheme-exec some-command
     - ASCII Backspace符号（`\x08`）
     - ASCII Bell符号（`\x07`）
 - `--debug-newlines`：永远用新的一行显示所有输出（用于末尾没有换行的输出内容）
+- `--debug-foreground`：当进程的前台状态（通过`tcgetpgrp`获取）变动时，显示提示输出。
+    - `! Foreground: False (<PID>)`：进程退出前台状态
+    - `! Foreground: True (<PID>)`：进程进入/重新进入前台状态
+    - `<PID>`为当前前台进程的PID
 - `--debug-nosubst`：不进行任何输出替换，即使已设定主题
 
 如需设定这些选项，请在**指定命令之前**指定这些选项，比如说：
