--- a/命令行输出替换/1. 编写定义文件.md
+++ b/命令行输出替换/1. 编写定义文件.md
@@ -170,16 +170,30 @@
 
 比如说，用户输入的`rm something -rf`指令会匹配限制条件中的`rm -rf`规则，但不会匹配到`something -rf rm`（因为第一个语句不同）和`rm -f`（因为原命令中不包括`-f`）。
 
-你可以选择其他的匹配机制：它们分别为`strictcmdmatch`，`exactcmdmatch`，和`smartcmdmatch`。只需要在`[/filter_commands]`的后面加上它们就可以了（两者之间加个空格）。你也可以使用`set_options`（详见[可以设定的选项](../附录：主题定义文件通用语法/可以设定的选项.md)）加上它们，以把它应用到之后所有的命令限制规则定义。请注意，`filter_command <命令>`语法只能通过`set_options`设定这些选项。
+你可以选择其他的匹配机制；只需要在`[/filter_commands]`的后面加上它们就可以了（两者之间加个空格）。你也可以使用`set_options`（详见[可以设定的选项](../附录：主题定义文件通用语法/可以设定的选项.md)）加上它们，以把它应用到之后所有的命令限制规则定义。请注意，`filter_command <命令>`语法只能通过`set_options`设定这些选项。
 
 - `strictcmdmatch`：用户输入的命令必须开始于限制条件命令，按语句计算。比如说，用户输入的`example-app something -e`会匹配到限制规则中的`example-app something`，但不会匹配到`example-app -e`（因为`example-app something -e`不以`example-app -e`开始）。
 - `exactcmdmatch`：用户输入的命令必须与限制条件命令完全相同
 - `smartcmdmatch`：和默认匹配机制相似，但是所有命令中单个横杠（`-`）开头的语句会被拆分成单个选项，如`ls -lih`将会被视为`ls -l -i -h`。带有多个横杠（`--`）的语句不受影响。
-- `normalcmdmatch`：默认匹配机制；用于重置/取消设定之前的设置
+- `normalcmdmatch`：默认匹配机制；**用于重置/取消设定之前的设置**
+- `foregroundonly`：仅在进程为前台运行时应用这些替换规则。该选项适用于使用`clitheme-exec`执行shell等应用程序：通过大多数shell执行其他命令时，该shell会切换为后台运行（并且将执行的命令切换为前台）。这个选项可以防止输出误替换的问题，并且可以确保仅在shell的提示信息上应用有关的的替换规则。
+    - 使用`noforegroundonly`以取消设定该选项
+    - 你可以使用`clitheme-exec --debug-foreground`以在前台状态切换时获得提示信息
+    - **注意：** 经测试，只有shell等应用程序会在执行其他命令时修改自己的前台状态；`sudo`等程序不会（除非通过`sudo`执行shell，如`sudo bash`）。
+    - **注意：** 大多数shell程序（`bash`、`zsh`、`csh`、`fish`）的命令执行错误提示（如`command not found`、`permission denied`等）会通过创建的另一个进程输出，并且shell会在后台运行。这会导致带有该选项的命令限制规则和对应的替换规则在这些提示输出上不会被应用：
 
-**注意：**无论选择了哪个匹配选项，如果用户输入的命令中第一个词语包含路径（指定可执行文件），`clitheme`会永远检查并尝试匹配程序名称。比如说，如果用户输入了`/usr/bin/python3 test.py`，`python3 test.py`也会被尝试匹配。
+```plaintext
+$ clitheme-exec --debug-foreground bash
+bash-3.2$ wef
+! Foreground: False
+bash: wef: command not found
+! Foreground: True
+bash-3.2$
+```
 
-样例：
+**注意：** 无论选择了哪个匹配选项，如果用户输入的命令中第一个词语包含路径（指定可执行文件），`clitheme`会永远检查并尝试匹配程序名称。比如说，如果用户输入了`/usr/bin/python3 test.py`，`python3 test.py`也会被尝试匹配。
+
+#### 样例：
 
 ```plaintext
 [filter_commands]
