--- a/附录：主题定义文件通用语法/可以设定的选项.md
+++ b/附录：主题定义文件通用语法/可以设定的选项.md
@@ -88,6 +88,9 @@
     - 单个`-`之后的字符（无论字母和数字）都会被这样处理
     - 起始与多个横杠的语句（`--`）将不会被这样处理
 - `normalcmdmatch`：**默认设定；用于重置之前设定**；用户输入的命令中的语句需要包含匹配条件中的语句（e.g. `example-app --this --that`会匹配`example-app --that`匹配条件）
+- `foregroundonly`：仅在进程为前台运行时应用这些替换规则。该选项适用于使用`clitheme-exec`执行shell等应用程序：通过大多数shell执行其他命令时，该shell会切换为后台运行（并且将执行的命令切换为前台）。这个选项可以防止输出误替换的问题，并且可以确保仅在shell的提示信息上应用有关的的替换规则。
+    - 使用`noforegroundonly`以取消设定该选项
+    - 你可以使用`clitheme-exec --debug-foreground`以在前台状态切换时获得提示信息
 ---
 以下几个选项仅适用于`[substitute_string]`和`[substitute_regex]`语法：
 - `subststdoutonly`：仅匹配standard output的输出内容
