--- a/自定义manpage文档/1. 编写定义文件.md
+++ b/自定义manpage文档/1. 编写定义文件.md
@@ -31,9 +31,12 @@
 
 在`[file_content]`中的文件内容会根据多行内容段落的机制处理。详见[多行内容段落](../附录：主题定义文件通用语法/多行内容段落.md)
 
+你可以同时指定多个`[file_content]`语句，以在同一文件内容下覆盖多个文档文件。它们必须指定与相邻的`[file_content]`语句之后，**并且中间可以有空行或注释**。在其他内容后插入`[file_content]`语句会被视为文件内容，而不是语法定义。
+
 ```plaintext
 {manpage_section}
     [file_content] man1 clitheme-man.1
+    [file_content] man8 clitheme-man.8
         .TH clitheme-man 1 2024-05-07
         .SH NAME
         clitheme\-man \- access manual pages in the current theme
@@ -51,16 +54,23 @@
 {/manpage_section}
 ```
 
-### 引用文件：`include_file`
+### 引用文件：`include_file`和`[include_file]`
 
 你可以使用`include_file`语法来使用定义文件所在文件夹中的一个文件来作为文档手册的文件内容，并且在下一行中使用`as`语法来定义目标文件路径。你需要在两者后面加上文件路径：在`include_file`后根据**目标文件路径**语法添加引用文件的相对文件路径（根据**定义文件所在的文件夹/路径**计算，不是终端的PWD/当前路径位置），并且在`as`后添加目标文件路径。
+
+你也可以使用`[include_file]`段落来指定多个目标文件，以使用同一个源文件来覆盖多个文档。
 
 ```plaintext
 {manpage_section}
     # 如果主题定义文件的路径是"Documents/example-doc.clithemedef.txt"，那引用的文件会从"Documents/doc_manpages/example-app.1"读取
     include_file doc_manpages example-app.1
         as man1 example-app.1
-    # ...
+    # 你也可以使用以下语法来覆盖多个目标文档文件
+    [include_file] doc_manpages example-app.1
+        as man1 example-app.1
+        as man1 app-example.1
+        as man1 example.1
+    [/include_file]
 {/manpage_section}
 ```
 
