Clarify mechanism of `endmatchhere` option

--- a/命令行输出替换/1. 编写定义文件.md
+++ b/命令行输出替换/1. 编写定义文件.md
@@ -65,7 +65,7 @@
 
 你可以为匹配规则设定一些选项。如需设定，请在`[/substitute_string]`或`[/substitute_regex]`之后添加选项设定，或使用`set_options`为之后定义的匹配规则应用这些选项设定。
 
-- `endmatchhere`，`noendmatchhere`：当遇到带有该选项的匹配规则时，不再继续按顺序应用其他的匹配规则
+- `endmatchhere`，`noendmatchhere`：当遇到带有该选项的匹配规则并且与当前输出内容成功匹配时，不再继续按顺序应用其他的匹配规则
     - 使用`noendmatchhere`以取消设定
 - `subststdoutonly`：仅匹配standard output的输出内容
 - `subststderronly`：仅匹配standard error的输出内容
