--- a/附录：主题定义文件通用语法/可以设定的选项.md
+++ b/附录：主题定义文件通用语法/可以设定的选项.md
@@ -96,5 +96,5 @@
 - `subststdoutonly`：仅匹配standard output的输出内容
 - `subststderronly`：仅匹配standard error的输出内容
 - `substall`：**默认设定；用于重置之前设定**；匹配所有内容
-- `endmatchhere`，`noendmatchhere`：当遇到带有该选项的匹配规则时，不再继续应用其他的匹配规则
+- `endmatchhere`，`noendmatchhere`：当遇到带有该选项的匹配规则并且与当前输出内容成功匹配时，不再继续应用其他的匹配规则
     - 使用`noendmatchhere`以取消设定
