Rename "Generating data" to "Processing files"

--- a/简介.md
+++ b/简介.md
@@ -62,8 +62,8 @@ test.c:4:3: warning: incompatible pointer types assigning to 'char *' from 'int 
 
 ```plaintext
 $ clitheme apply-theme clang-theme_clithemedef.txt
-==> Generating data...
-Successfully generated data
+==> Processing files...
+Successfully processed files
 ==> Applying theme...Success
 Theme applied successfully
 ```
