Rename `substall` option to `substallstreams`

--- a/命令行输出替换/1. 编写定义文件.md
+++ b/命令行输出替换/1. 编写定义文件.md
@@ -69,7 +69,7 @@
     - 使用`noendmatchhere`以取消设定
 - `subststdoutonly`：仅匹配standard output的输出内容
 - `subststderronly`：仅匹配standard error的输出内容
-- `substall`：默认设定；用于重置之前设定；匹配所有内容
+- `substallstreams`：默认设定；用于重置之前设定；匹配所有内容
 
 更多信息以及可以设定的选项请见[可以设定的选项](../附录：主题定义文件通用语法/可以设定的选项.md)。
 
