Rename options in `clitheme-exec`
- Rename `--debug-showchars` to `--showchars`
- Rename `--debug-foreground` to `--foreground-stat`
- Rename `--debug-nosubst` to `--nosubst`

- Require `--debug` when using `--debug-newlines`

--- a/命令行输出替换/3. 样例教程.md
+++ b/命令行输出替换/3. 样例教程.md
@@ -1,6 +1,6 @@
 # 一个简单的样例展示
 
-本文章将展示命令行输出替换的一个样例，包含使用`clitheme-exec --debug-showchars`获取所需的输出和为输出编写替换规则。
+本文章将展示命令行输出替换的一个样例，包含使用`clitheme-exec --showchars`获取所需的输出和为输出编写替换规则。
 
 浏览本文章前，请先阅读[编写定义文件](1.%20编写定义文件.md)和[使用clitheme-exec](2.%20使用clitheme-exec.md)。
 
@@ -8,14 +8,14 @@
 
 ## 1. 获取应用程序的输出
 
-假如说我们想要自定义`clang`编译器中的一个错误提示。如果我们的测试文件时`test.c`，我们可以使用`clitheme-exec --debug-showchars clang test.c`来获取包含终端控制符号的输出。编写匹配规则时需要考虑到这些终端控制符号；这是为什么我们要获取**包含终端控制符号**的输出。你也可以使用`--debug-nosubst`来获取未替换过的输出，如果你已经设定了主题。
+假如说我们想要自定义`clang`编译器中的一个错误提示。如果我们的测试文件时`test.c`，我们可以使用`clitheme-exec --showchars clang test.c`来获取包含终端控制符号的输出。编写匹配规则时需要考虑到这些终端控制符号；这是为什么我们要获取**包含终端控制符号**的输出。你也可以使用`--nosubst`来获取未替换过的输出，如果你已经设定了主题。
 
 你可以使用`--debug`选项来在每一行输出前加上标记。这个标记会包含输出为stdout或stderr的信息（通过`o`和`e`表达）。
 
-注意：`--debug-showchars`和任何debug选项必须放在`clang test.c`的前面，否则要执行的命令将会被认为`clang test.c --debug-showchars`。
+注意：`--showchars`和任何debug选项必须放在`clang test.c`的前面，否则要执行的命令将会被认为`clang test.c --showchars`。
 
 ```plaintext
-$ clitheme-exec --debug --debug-showchars --debug-nosubst clang test.c
+$ clitheme-exec --debug --showchars --nosubst clang test.c
 e> {{ESC}}[1mtest.c:1:1: {{ESC}}[0m{{ESC}}[0;1;31merror: {{ESC}}[0m{{ESC}}[1munknown type name 'bool'{{ESC}}[0m\r\n
 e> bool *haku(int *a) {\r\n
 e> {{ESC}}[0;1;32m^\r\n
