--- a/简介.md
+++ b/简介.md
@@ -48,7 +48,7 @@ test.c:4:3: warning: incompatible pointer types assigning to 'char *' from 'int 
         gcc
         g++
     [/filter_commands]
-    # clang的输出包含用于设定字体颜色的终端控制字符：请使用"clitheme-exec --debug-showchars clang test.c"以显示它们
+    # clang的输出包含用于设定字体颜色的终端控制字符：请使用"clitheme-exec --showchars clang test.c"以显示它们
     [substitute_regex] (?P<prefix>^({{ESC}}.*?m)*(.+:\d+:\d+:) ({{ESC}}.*?m)*)warning: (?P<esc>({{ESC}}.*?m)*)incompatible pointer types assigning to '(?P<name1>.+)' from '(?P<name2>.+)'
         locale:default \g<prefix>杂鱼～: \g<esc>'\g<name1>'从不兼容的指针类型赋值为'\g<name2>',纯爱战神很生气！
     [/substitute_regex]
