--- a/命令行输出替换/1. 编写定义文件.md
+++ b/命令行输出替换/1. 编写定义文件.md
@@ -58,7 +58,7 @@
     - 替换内容可以是多行的；详见[多行内容段落](../附录：主题定义文件通用语法/多行内容段落.md)
 - 如果替换的内容只有一行，你可以使用`locale:<系统语言>`并且在后面加上替换的内容。这样子写起来会更便捷
     - 注意：不能同时指定多个系统语言，并且不支持在此语法中使用变量替换（`substvar`；详见[可以设定的选项](../附录：主题定义文件通用语法/可以设定的选项.md)），如`locale:{{some_var}}`将不会把`{{some_var}}`替换成对应变量的内容
-- 如果匹配的内容之间有任何终端控制字符，匹配内容中必须包括它。你可以使用`clitheme-exec --debug-showchars`在终端输出中以绿色颜色显示这些字符（详见[使用clitheme-exec](2.%20使用clitheme-exec.md)）。如需引用ANSI Escape字符（`{{ESC}}`），请在前面添加`set_options substesc`（详见[可以设定的选项](../附录：主题定义文件通用语法/可以设定的选项.md)）并且在内容中使用`{{ESC}}`。**如需引用其他字符（如`\x08`、`\x07`等），你必须使用正则表达式替换（`[substitute_regex]`）。**
+- 如果匹配的内容之间有任何终端控制字符，匹配内容中必须包括它。你可以使用`clitheme-exec --showchars`在终端输出中以绿色颜色显示这些字符（详见[使用clitheme-exec](2.%20使用clitheme-exec.md)）。如需引用ANSI Escape字符（`{{ESC}}`），请在前面添加`set_options substesc`（详见[可以设定的选项](../附录：主题定义文件通用语法/可以设定的选项.md)）并且在内容中使用`{{ESC}}`。**如需引用其他字符（如`\x08`、`\x07`等），你必须使用正则表达式替换（`[substitute_regex]`）。**
 - 以`#`开头的行是注释；它们必须定义在新的一行上
 
 ### 可以设定的选项
@@ -178,12 +178,12 @@
 - `normalcmdmatch`：默认匹配机制；**用于重置/取消设定之前的设置**
 - `foregroundonly`：仅在进程为前台运行时应用这些替换规则。该选项适用于使用`clitheme-exec`执行shell等应用程序：通过大多数shell执行其他命令时，该shell会切换为后台运行（并且将执行的命令切换为前台）。这个选项可以防止输出误替换的问题，并且可以确保仅在shell的提示信息上应用有关的的替换规则。
     - 使用`noforegroundonly`以取消设定该选项
-    - 你可以使用`clitheme-exec --debug-foreground`以在前台状态切换时获得提示信息
+    - 你可以使用`clitheme-exec --foreground-stat`以在前台状态切换时获得提示信息
     - **注意：** 经测试，只有shell等应用程序会在执行其他命令时修改自己的前台状态；`sudo`等程序不会（除非通过`sudo`执行shell，如`sudo bash`）。
     - **注意：** 大多数shell程序（`bash`、`zsh`、`csh`、`fish`）的命令执行错误提示（如`command not found`、`permission denied`等）会通过创建的另一个进程输出，并且shell会在后台运行。这会导致带有该选项的命令限制规则和对应的替换规则在这些提示输出上不会被应用：
 
 ```plaintext
-$ clitheme-exec --debug-foreground bash
+$ clitheme-exec --foreground-stat bash
 bash-3.2$ wef
 ! Foreground: False
 bash: wef: command not found
