Add missing options in `clitheme-exec` command example

--- a/命令行输出替换/2. 使用clitheme-exec.md
+++ b/命令行输出替换/2. 使用clitheme-exec.md
@@ -7,7 +7,7 @@
 ```plaintext
 $ clitheme-exec
 使用方式：
-        clitheme-exec [--debug] [--debug-color] [--debug-newlines] [--showchars] [command]
+        clitheme-exec [--debug] [--debug-color] [--debug-newlines] [--showchars] [--foreground-stat] [--nosubst] [command]
 错误：未指定命令
 使用"clitheme-exec --help"以获取使用方式
 $ python3 -m clitheme.exec
