Add prompt to invoke `set_local_themedef` only once in module code;
- Add UTF-8 encoding specification to relevant example code

--- a/应用程序和字符串定义API/应用程序适配/调用本地主题定义文件.md
+++ b/应用程序和字符串定义API/应用程序适配/调用本地主题定义文件.md
@@ -16,12 +16,14 @@
 
 ```py
 from clitheme import frontend
-f=open("<filename>", "r") # <filename>为文件路径
+f=open("<filename>", "r", encoding="utf-8") # <filename>为文件路径
 c=f.read() 
 frontend.set_local_themedef(c)
 ```
 
 设定完成后会对之后的字符串调用操作生效。获取字符串时，只有当前系统/全局主题设定中没有该字符串定义的情况下才会调用本地文件中的定义。
+
+**注意：** 该设定会对同一Python模块/应用程序中的所有代码文件生效，不需要在多个文件中重复调用该函数。
 
 ## 同时设定多个本地定义文件
 
