--- a/命令行输出替换/1. 编写定义文件.md
+++ b/命令行输出替换/1. 编写定义文件.md
@@ -70,6 +70,11 @@
 - `subststdoutonly`：仅匹配standard output的输出内容
 - `subststderronly`：仅匹配standard error的输出内容
 - `substallstreams`：默认设定；用于重置之前设定；匹配所有内容
+- `foregroundonly`：仅在进程为前台运行时应用这些替换规则。该选项适用于使用`clitheme-exec`执行shell等应用程序：通过大多数shell执行其他命令时，该shell会切换为后台运行（并且将执行的命令切换为前台）。这个选项可以防止输出误替换的问题，并且可以确保仅在shell的提示信息上应用有关的的替换规则。
+    - 使用`noforegroundonly`以取消设定该选项
+    - 你可以使用`clitheme-exec --foreground-stat`以在前台状态切换时获得提示信息
+    - **注意：** 经测试，只有shell等应用程序会在执行其他命令时修改自己的前台状态；`sudo`等程序不会（除非通过`sudo`执行shell，如`sudo bash`）。
+    - **注意：** 大多数shell程序（`bash`、`zsh`、`csh`、`fish`）的命令执行错误提示（如`command not found`、`permission denied`等）会通过创建的另一个进程输出，并且shell会在后台运行。这会导致带有该选项的命令限制规则和对应的替换规则在这些提示输出上不会被应用：
 
 更多信息以及可以设定的选项请见[可以设定的选项](../附录：主题定义文件通用语法/可以设定的选项.md)。
 
@@ -176,11 +181,7 @@
 - `exactcmdmatch`：用户输入的命令必须与限制条件命令完全相同
 - `smartcmdmatch`：和默认匹配机制相似，但是所有命令中单个横杠（`-`）开头的语句会被拆分成单个选项，如`ls -lih`将会被视为`ls -l -i -h`。带有多个横杠（`--`）的语句不受影响。
 - `normalcmdmatch`：默认匹配机制；**用于重置/取消设定之前的设置**
-- `foregroundonly`：仅在进程为前台运行时应用这些替换规则。该选项适用于使用`clitheme-exec`执行shell等应用程序：通过大多数shell执行其他命令时，该shell会切换为后台运行（并且将执行的命令切换为前台）。这个选项可以防止输出误替换的问题，并且可以确保仅在shell的提示信息上应用有关的的替换规则。
-    - 使用`noforegroundonly`以取消设定该选项
-    - 你可以使用`clitheme-exec --foreground-stat`以在前台状态切换时获得提示信息
-    - **注意：** 经测试，只有shell等应用程序会在执行其他命令时修改自己的前台状态；`sudo`等程序不会（除非通过`sudo`执行shell，如`sudo bash`）。
-    - **注意：** 大多数shell程序（`bash`、`zsh`、`csh`、`fish`）的命令执行错误提示（如`command not found`、`permission denied`等）会通过创建的另一个进程输出，并且shell会在后台运行。这会导致带有该选项的命令限制规则和对应的替换规则在这些提示输出上不会被应用：
+- `foregroundonly`：你也可以在限制条件中指定该选项，以应用于适用的替换规则。当取消设定或者重新设定新的限制条件时，该选项将会还原到之前的设定，**即使中途更改了该选项的设定**。
 
 ```plaintext
 $ clitheme-exec --foreground-stat bash
