--- a/附录：主题定义文件通用语法/可以设定的选项.md
+++ b/附录：主题定义文件通用语法/可以设定的选项.md
@@ -91,6 +91,7 @@
 - `foregroundonly`：仅在进程为前台运行时应用这些替换规则。该选项适用于使用`clitheme-exec`执行shell等应用程序：通过大多数shell执行其他命令时，该shell会切换为后台运行（并且将执行的命令切换为前台）。这个选项可以防止输出误替换的问题，并且可以确保仅在shell的提示信息上应用有关的的替换规则。
     - 使用`noforegroundonly`以取消设定该选项
     - 你可以使用`clitheme-exec --foreground-stat`以在前台状态切换时获得提示信息
+    - 你也可以在限制条件中指定该选项，以应用于适用的替换规则。当取消设定或者重新设定新的限制条件时，该选项将会还原到之前的设定，**即使中途更改了该选项的设定**。
 ---
 以下几个选项仅适用于`[substitute_string]`和`[substitute_regex]`语法：
 - `subststdoutonly`：仅匹配standard output的输出内容
