Update descriptions on setting frontend default values

--- a/应用程序和字符串定义API/应用程序适配/3. 使用frontend模块.md
+++ b/应用程序和字符串定义API/应用程序适配/3. 使用frontend模块.md
@@ -81,43 +81,52 @@ f.retrieve_entry_or_fallback("example-fmt-entry", "{0}: Current value is {value}
 
 ## 全局定义参数
 
-除了在`FetchDescriptor`中定义这些选项和参数，你可以对程序中所有的`FetchDescriptor`设置这些参数。以下变量定义会对所有的`FetchDescriptor`生效，除非创建`FetchDescriptor`时明确指定了这些参数。
+除了在`FetchDescriptor`中定义这些选项和参数，你可以对程序中所有的`FetchDescriptor`设置默认参数值。以下操作会对**在当前文件中**所有的`FetchDescriptor`生效，除非创建`FetchDescriptor`时明确指定了这些参数。你可以指定`None`为数值来取消设定默认值。
 
-- `global_domain`，`global_appname`，和`global_subsections`：指定了默认的`domain_name`，`app_name`，和`subsections`数值
-- `global_debugmode`：指定了默认的`debug_mode`数值
+- `set_domain`，`set_appname`，和`set_subsections`：指定默认的`domain_name`，`app_name`，和`subsections`数值
+- `set_debugmode`：指定默认的`debug_mode`数值
     - 该数值也会控制`frontend.set_local_themedef`函数的输出（详见[**调用本地主题定义文件**](调用本地主题定义文件.md)）
-- `global_lang`：指定了默认的`lang`数值
-- `global_disablelang`：指定了默认的`disable_lang`数值
+- `set_lang`：指定默认的`lang`数值
+- `set_disablelang`：指定默认的`disable_lang`数值
 
 **请注意：** 这些全局定义只会影响之后新建的`FetchDescriptor`；更改或设定这些全局定义不会影响已经创建的`FetchDescriptor`。
+
+你也可以修改以下全局变量来设定默认值。该定义会对一个模块中的**所有文件**生效，并且没有通过以上函数进行设定（或取消设定）时会被使用。
+
+- `global_domain`
+- `global_appname`
+- `global_subsections`
+- `global_debugmode`
+- `global_lang`
+- `global_disablelang`
 
 ```py
 from clitheme import frontend
 
 f0=frontend.FetchDescriptor() # 不会使用定义的全局变量
 
-# 默认值：
+# 参数默认值设定
+frontend.set_domain("com.example") # 对应domain_name
+frontend.set_appname("example-app") # 对应app_name
+frontend.set_subsections("example-subsection subsection-2") # 对应subsections
+frontend.set_debugmode(False) # 对应debug_mode
+frontend.set_lang("") # 对应lang（留空以使用系统语言）
+frontend.set_disablelang(False) # 对应disable_lang
+
+# 会使用定义的默认值
+f1=frontend.FetchDescriptor() 
+f2=frontend.FetchDescriptor()
+
+# 会忽略设定的set_debugmode默认值，设定debug_mode为True
+f3=frontend.FetchDescriptor(debug_mode=True) 
+
+# 设定以下全局变量并且没有通过函数设定时，会被视为默认值
 # frontend.global_domain=""
 # frontend.global_appname=""
 # frontend.global_subsections=""
 # frontend.global_debugmode=False
 # frontend.global_lang=""
 # frontend.global_disablelang=False
-
-# 全局设定变量
-frontend.global_domain="com.example" # 对应domain_name
-frontend.global_appname="example-app" # 对应app_name
-frontend.global_subsections="example-subsection subsection-2" # 对应subsections
-frontend.global_debugmode=False # 对应debug_mode
-frontend.global_lang="" # 对应lang（留空以使用系统语言）
-frontend.global_disablelang=False # 对应disable_lang
-
-# 会使用定义的全局变量
-f1=frontend.FetchDescriptor() 
-f2=frontend.FetchDescriptor()
-
-# 会忽略全局的global_debugmode=False定义，设定debug_mode为True
-f3=frontend.FetchDescriptor(debug_mode=True) 
 ```
 
 ## 使用fallback模块
