--- a/应用程序和字符串定义API/应用程序适配/调用本地主题定义文件.md
+++ b/应用程序和字符串定义API/应用程序适配/调用本地主题定义文件.md
@@ -27,11 +27,15 @@ frontend.set_local_themedef(c)
 
 ## 同时设定多个本地定义文件
 
-你可以通过`set_local_themedef`函数中的`overlay`参数同时设定多个本地定义文件。如需使用，请在每次的函数调用指定这个参数。
+你可以通过`set_local_themedefs`函数同时设定多个本地定义文件。使用时，请通过列表指定多个文件内容。
+
+除此之外，你可以使用`set_local_themedef`函数并设定`overlay`参数。请在每次的函数调用指定这个参数。
 
 ```py
 from clitheme import frontend
-# ...
+# 方法1：
+frontend.set_local_themedefs([file_content1, file_content2, file_content3])
+# 方法2：
 # 第一个调用不需要指定overlay
 frontend.set_local_themedef(file_content1)
 frontend.set_local_themedef(file_content2, overlay=True)
