Add beta version information to version document

--- a/关于版本的重要信息.md
+++ b/关于版本的重要信息.md
@@ -3,11 +3,12 @@
 ## 命名方式
 
 `clitheme`采用了以下的版本命名方式：
-`a.b.X`或`a.b[.X]-devYYYYMMDD`
+`a.b.X`或`a.b[.X]-devYYYYMMDD`或`a.b-betaN`
 
 - `a.b`代表了主要版本号。当有新的功能加入`clitheme`时，该版本号的`b`值会变更。比如说：`1.0`、`1.1`、`2.0`
 - `.X`代表了该版本的发行版次。当小改进和问题修复被加入时，该版本号的`X`值会变更。比如说：`1.0.1`，`2.0.1`
 - `dev`代表了正在开发的下一个版本。当新的改动被同步到仓库时，我会把当天的日期添加在版本号的后面。比如说：`dev20231202`
+- `beta`代表了测试版本；一般会在有复杂功能的功能更新前发布测试版本以更好的改进这些功能。
 
 这个版本信息会被储存在仓库中的`src/clitheme/_version.py`中，并且会在新的发行版中包括此版本号。
 
