Require `name` field in header section

--- a/应用程序和字符串定义API/编写主题定义文件/基本用法.md
+++ b/应用程序和字符串定义API/编写主题定义文件/基本用法.md
@@ -35,7 +35,7 @@
 {/header_section}
 ```
 
-在`header`段落内可以定义以下信息。你不需要定义所有的信息，但是建议定义以下所有的信息。
+在`header`段落内可以定义以下信息。你仅需要定义`name`条目，但是建议定义以下所有的信息。
 
 - `name`：定义该主题的名称，如**example-app颜文字主题**。
 - `description`: 定义该主题的更多详细信息。
