--- a/附录：主题定义文件通用语法/可以设定的选项.md
+++ b/附录：主题定义文件通用语法/可以设定的选项.md
@@ -98,4 +98,5 @@
 - `subststderronly`：仅匹配standard error的输出内容
 - `substallstreams`：**默认设定；用于重置之前设定**；匹配所有内容
 - `endmatchhere`，`noendmatchhere`：当遇到带有该选项的匹配规则并且与当前输出内容成功匹配时，不再继续应用其他的匹配规则
+    - **注意：** 该选项仅适用于匹配规则所在文件中的其他规则，其他文件中的规则将不受影响
     - 使用`noendmatchhere`以取消设定
