Update documentation to use new `subst` shortened syntax

--- a/附录：主题定义文件通用语法/可以设定的选项.md
+++ b/附录：主题定义文件通用语法/可以设定的选项.md
@@ -6,29 +6,29 @@
 
 你可以使用`set_options <选项>`语法来设定选项。你可以同时指定多个选项设定；只需要使用空格分开即可。设定后，这些选项将会被应用在该语句之后的相关定义。比如：`set_options substesc substvar leadtabs:1`
 
-你也可以对单个定义设定这些选项；只需要在它们的结束语句之后添加这些选项设定就可以了。这些设定会覆盖之前通过`set_options`设定的选项设置。比如说：`[/substitute_regex] subststdoutonly endmatchhere`或`[/locale] substesc substvar leadtabs:1`
+你也可以对单个定义设定这些选项；只需要在它们的结束语句之后添加这些选项设定就可以了。这些设定会覆盖之前通过`set_options`设定的选项设置。比如说：`[/subst_regex] subststdoutonly endmatchhere`或`[/locale] substesc substvar leadtabs:1`
 
 ```plaintext
 {substrules_section}
     # substesc和endmatchhere选项会对以下所有的匹配规则生效
     set_options endmatchhere substesc
-    [substitute_string] Some text
+    [subst_string] Some text
         [locale] default
             Some other text here
             Good stuff {{ESC}}
         [/locale]
-    [/substitute_string] subststderronly
-    [substitute_string] Some other text
+    [/subst_string] subststderronly
+    [subst_string] Some other text
         [locale] default
             Another good stuff
         [/locale]
-    [/substitute_string] noendmatchhere subststdoutonly
+    [/subst_string] noendmatchhere subststdoutonly
     # 上方定义的noendmatchhere会覆盖之前在set_options中定义的endmatchhere
-    [substitute_regex] Error at file number (?P<num>\d+): item (?P<name>.+) not found
+    [subst_regex] Error at file number (?P<num>\d+): item (?P<name>.+) not found
         # 如果想对以下内容设定选项，需要使用多行内容段落
         locale:zh_CN (ToT)/~~~ 在文件\g<num>发生错误：找不到项目"\g<name>"！(>﹏<)
         locale:default (ToT)/~~~ Error at file number \g<num>! Could not find item "\g<name>"!
-    [/substitute_regex]
+    [/subst_regex]
 {/substrules_section}
 ```
 
@@ -73,9 +73,9 @@
 
 - `substesc`：将内容中的`{{ESC}}`替换为终端ESC（ASCII Escape）字符（`\x1b`）
     - **该选项仅适用于这些地方：**`header`段落中的`description`定义；`substrules`段落中的匹配和替换内容；`entries`中的字符串定义内容
-    - 当该选项在`[/substitute_string]`或`[/substitute_regex]`语句后指定，会应用在匹配内容上
+    - 当该选项在`[/subst_string]`或`[/subst_regex]`语句后指定，会应用在匹配内容上
 - `substvar`：将内容中的变量名称引用替换成变量内容（详见[内容变量](./内容变量.md)）
-    - 当该选项在`[/substitute_string]`或`[/substitute_regex]`语句后指定，会应用在匹配内容上
+    - 当该选项在`[/subst_string]`或`[/subst_regex]`语句后指定，会应用在匹配内容上
     - 当该选项在`[/entry]`语句后指定，会应用在路径名称上
 
 ### 命令行输出替换
@@ -93,7 +93,7 @@
     - 你可以使用`clitheme-exec --foreground-stat`以在前台状态切换时获得提示信息
     - 你也可以在限制条件中指定该选项，以应用于适用的替换规则。当取消设定或者重新设定新的限制条件时，该选项将会还原到之前的设定，**即使中途更改了该选项的设定**。
 ---
-以下几个选项仅适用于`[substitute_string]`和`[substitute_regex]`语法：
+以下几个选项仅适用于`[subst_string]`和`[subst_regex]`语法：
 - `subststdoutonly`：仅匹配standard output的输出内容
 - `subststderronly`：仅匹配standard error的输出内容
 - `substallstreams`：**默认设定；用于重置之前设定**；匹配所有内容
