--- a/附录：主题定义文件通用语法/多语言支持.md
+++ b/附录：主题定义文件通用语法/多语言支持.md
@@ -50,14 +50,14 @@ LC_ALL=
 {/entries_section}
 {substrules_section}
     # ...
-    [substitute_string] Some example output message
+    [subst_string] Some example output message
         locale:default Output message! :)
         locale:zh_CN 输出提示！o(≧v≦)o
         # 同时定义default、C、和en_US语言
         [locale] default C en_US
             Output message! :)
         [/locale]
-    [/substitute_string]
+    [/subst_string]
 {/substrules_section}
 ```
 
