--- a/命令行输出替换/1. 编写定义文件.md
+++ b/命令行输出替换/1. 编写定义文件.md
@@ -22,7 +22,7 @@
 
 **请注意：**目前仅支持匹配单行的输出，不支持匹配多行输出（这意味着**不要在匹配正则表达式中使用`\n`等换行符号**）。不需要匹配一行中的所有内容；你可以仅匹配和替换一行中的部分内容。
 
-### 字符串和正则表达式替换：`substitute_string`和`substitute_regex`
+### 字符串和正则表达式替换：`subst_string`和`subst_regex`
 
 定义字符串规则的语法如下：
 
@@ -30,26 +30,27 @@
 {substrules_section}
     # 把"{{ESC}}"替换为ANSI Escape字符：
     set_options substesc
-    [substitute_string] <匹配文本内容>
+    [subst_string] <匹配文本内容>
         [locale] <default或其他系统语言（locale）>
             <替换文本内容>
         [/locale]
         # 或者：
         locale:<default或其他系统语言（locale）> <替换文本内容>
-    [/substitute_string]
+    [/subst_string]
 
-    [substitute_regex] <匹配正则表达式>
+    [subst_regex] <匹配正则表达式>
         [locale] <default或其他系统语言（locale）>
             <替换内容（正则表达式替换语法）>
         [/locale]
         # 或者：
         locale:<default或其他系统语言（locale）> <替换文本内容>
-    [/substitute_regex]
+    [/subst_regex]
 {/substrules_section}
 ```
 
-- 在`[substitute_string]`之后输入要匹配/查找的文本内容；在`[substitute_regex]`之后输入要匹配的正则表达式。
+- 在`[subst_string]`之后输入要匹配/查找的文本内容；在`[subst_regex]`之后输入要匹配的正则表达式。
     - `clitheme`用的是Python内置的的正则表达式引擎，所以你必须使用Python的正则表达式语法。有关更多信息，请见[本文章](https://docs.python.org/zh-cn/3/howto/regex.html)。
+    - 你也可以使用`[substitute_string]`和`[substitute_regex]`语法
 - 使用以`[locale]`开头的内容段落输入要替换的内容
     - 在`[locale]`之后可以定义系统语言（locale）：当前的系统语言设定符合这个定义时才会执行替换；如不需要限制系统语言，请使用`default`。
         - 你可以同时指定多个系统语言；只需要用空格分开就可以了（如`[locale] en_US zh_CN`）
@@ -58,12 +59,12 @@
     - 替换内容可以是多行的；详见[多行内容段落](../附录：主题定义文件通用语法/多行内容段落.md)
 - 如果替换的内容只有一行，你可以使用`locale:<系统语言>`并且在后面加上替换的内容。这样子写起来会更便捷
     - 注意：不能同时指定多个系统语言，但是支持在此语法中使用变量替换（`substvar`；详见[可以设定的选项](../附录：主题定义文件通用语法/可以设定的选项.md)），如`locale:{{some_var}}`会把`{{some_var}}`替换成对应变量的内容，并且在变量的内容中可以通过空格指定多个系统语言。
-- 如果匹配的内容之间有任何终端控制字符，匹配内容中必须包括它。你可以使用`clitheme-exec --showchars`在终端输出中以绿色颜色显示这些字符（详见[使用clitheme-exec](2.%20使用clitheme-exec.md)）。如需引用ANSI Escape字符（`{{ESC}}`），请在前面添加`set_options substesc`（详见[可以设定的选项](../附录：主题定义文件通用语法/可以设定的选项.md)）并且在内容中使用`{{ESC}}`。**如需引用其他字符（如`\x08`、`\x07`等），你必须使用正则表达式替换（`[substitute_regex]`）。**
+- 如果匹配的内容之间有任何终端控制字符，匹配内容中必须包括它。你可以使用`clitheme-exec --showchars`在终端输出中以绿色颜色显示这些字符（详见[使用clitheme-exec](2.%20使用clitheme-exec.md)）。如需引用ANSI Escape字符（`{{ESC}}`），请在前面添加`set_options substesc`（详见[可以设定的选项](../附录：主题定义文件通用语法/可以设定的选项.md)）并且在内容中使用`{{ESC}}`。**如需引用其他字符（如`\x08`、`\x07`等），你必须使用正则表达式替换（`[subst_regex]`）。**
 - 以`#`开头的行是注释；它们必须定义在新的一行上
 
 ### 可以设定的选项
 
-你可以为匹配规则设定一些选项。如需设定，请在`[/substitute_string]`或`[/substitute_regex]`之后添加选项设定，或使用`set_options`为之后定义的匹配规则应用这些选项设定。
+你可以为匹配规则设定一些选项。如需设定，请在`[/subst_string]`或`[/subst_regex]`之后添加选项设定，或使用`set_options`为之后定义的匹配规则应用这些选项设定。
 
 - `endmatchhere`，`noendmatchhere`：当遇到带有该选项的匹配规则并且与当前输出内容成功匹配时，不再继续按顺序应用其他的匹配规则
     - **注意：** 该选项仅适用于匹配规则所在文件中的其他规则，其他文件中的规则将不受影响
@@ -81,35 +82,35 @@
 
 ### 同时指定多个匹配表达式
 
-在替换内容基本相同的情况下，你可以为一个规则定义同时指定多个匹配表达式。该功能可以免去对替换内容和定义段落的重复复制粘贴，并且修改替换内容会简单很多。如需使用，请同时指定多个`[substitute_string]`或`[substitute_regex]`语句。
+在替换内容基本相同的情况下，你可以为一个规则定义同时指定多个匹配表达式。该功能可以免去对替换内容和定义段落的重复复制粘贴，并且修改替换内容会简单很多。如需使用，请同时指定多个`[subst_string]`或`[subst_regex]`语句。
 
-**注意：** 不能同时指定`[substitute_string]`或`[substitute_regex]`语句（两者不能在同一个规则定义中混用）
+**注意：** 不能同时指定`[subst_string]`或`[subst_regex]`语句（两者不能在同一个规则定义中混用）
 
 样例：
 
 ```plaintext
 {substrules_section}
-    [substitute_string] Some text 1
-    [substitute_string] Some another text
-    [substitute_string] Some text 2
+    [subst_string] Some text 1
+    [subst_string] Some another text
+    [subst_string] Some text 2
         locale:default Some substitution text
-    [/substitute_string]
+    [/subst_string]
     # 上方定义等于以下定义：
-    [substitute_string] Some text 1
+    [subst_string] Some text 1
         locale:default Some substitution text
-    [/substitute_string]
-    [substitute_string] Some text 2
+    [/subst_string]
+    [subst_string] Some text 2
         locale:default Some substitution text
-    [/substitute_string]
-    [substitute_string] Some another text
+    [/subst_string]
+    [subst_string] Some another text
         locale:default Some substitution text
-    [/substitute_string]
+    [/subst_string]
 
     # 错误语法（两者不能混用）：
-    [substitute_string] Some text 1
-    [substitute_regex] Some regex 1
+    [subst_string] Some text 1
+    [subst_regex] Some regex 1
         locale:default Some substitution text
-    [/substitute_string]
+    [/subst_string]
 {/substrules_section}
 ```
 
@@ -119,24 +120,24 @@
 {substrules_section}
     # substesc和endmatchhere选项会对以下所有的匹配规则生效
     set_options endmatchhere substesc
-    [substitute_string] Some text
+    [subst_string] Some text
         [locale] default
             Some other text here
             Good stuff {{ESC}}
         [/locale]
-    [/substitute_string] subststderronly
-    [substitute_string] Some other text
+    [/subst_string] subststderronly
+    [subst_string] Some other text
         [locale] default
             Another good stuff
         [/locale]
-    [/substitute_string] noendmatchhere subststdoutonly
+    [/subst_string] noendmatchhere subststdoutonly
     # 上方定义的noendmatchhere会覆盖之前在set_options中定义的endmatchhere
-    [substitute_regex] Error at file number (?P<num>\d+): item (?P<name>.+) not found
+    [subst_regex] Error at file number (?P<num>\d+): item (?P<name>.+) not found
         # 如果系统语言为zh_CN，会使用以下定义：
         locale:zh_CN (ToT)/~~~ 在文件\g<num>发生错误：找不到项目"\g<name>"！(>﹏<)
         # 否则，会使用以下定义：
         locale:default (ToT)/~~~ Error at file number \g<num>! Could not find item "\g<name>"!
-    [/substitute_regex]
+    [/subst_regex]
 {/substrules_section}
 ```
 
@@ -152,15 +153,15 @@
     # 你也可以使用以下语法：
     filter_command <命令>
     # 该限制会对以下的规则生效
-    [substitute_regex]
+    [subst_regex]
         <...>
-    [/substitute_regex]
+    [/subst_regex]
     # 使用以下语句对之后的规则取消设定限制
     unset_filter_command
     # 以下的规则不会受到限制
-    [substitute_regex]
+    [subst_regex]
         <...>
-    [/substitute_regex]
+    [/subst_regex]
 {/substrules_section}
 ```
 
