--- a/简介.md
+++ b/简介.md
@@ -49,12 +49,12 @@ test.c:4:3: warning: incompatible pointer types assigning to 'char *' from 'int 
         g++
     [/filter_commands]
     # clang的输出包含用于设定字体颜色的终端控制字符：请使用"clitheme-exec --showchars clang test.c"以显示它们
-    [substitute_regex] (?P<prefix>^({{ESC}}.*?m)*(.+:\d+:\d+:) ({{ESC}}.*?m)*)warning: (?P<esc>({{ESC}}.*?m)*)incompatible pointer types assigning to '(?P<name1>.+)' from '(?P<name2>.+)'
+    [subst_regex] (?P<prefix>^({{ESC}}.*?m)*(.+:\d+:\d+:) ({{ESC}}.*?m)*)warning: (?P<esc>({{ESC}}.*?m)*)incompatible pointer types assigning to '(?P<name1>.+)' from '(?P<name2>.+)'
         locale:default \g<prefix>杂鱼～: \g<esc>'\g<name1>'从不兼容的指针类型赋值为'\g<name2>',纯爱战神很生气！
-    [/substitute_regex]
-    [substitute_regex] (?P<prefix>^({{ESC}}.*?m)*(.+:\d+:\d+:) ({{ESC}}.*?m)*)error: (?P<esc>({{ESC}}.*?m)*)unknown type name '(?P<type>.+)'
+    [/subst_regex]
+    [subst_regex] (?P<prefix>^({{ESC}}.*?m)*(.+:\d+:\d+:) ({{ESC}}.*?m)*)error: (?P<esc>({{ESC}}.*?m)*)unknown type name '(?P<type>.+)'
         locale:default \g<prefix>笨蛋！: \g<esc>未知的类型名'\g<type>',是忘了定义了吗喵？
-    [/substitute_regex]
+    [/subst_regex]
 {/substrules_section}
 ```
 
