Small typo fix in documentation
- Fix an incorrect word in a file

--- a/命令行输出替换/2. 使用clitheme-exec.md
+++ b/命令行输出替换/2. 使用clitheme-exec.md
@@ -42,7 +42,7 @@ $ sudo clitheme-exec some-command
 <...>
 ```
 
-如果你已经应用了主题，但是依然受到“没有设定主题”的提示，那是因为使用`sudo`时没有保留你的用户文件夹信息。你可以在`/etc/sudoers`文件中添加`Defaults env_keep += "HOME"`，或找到这一行并删除注释符号，以修复这个问题。
+如果你已经应用了主题，但是依然收到“没有设定主题”的提示，那是因为使用`sudo`时没有保留你的用户文件夹信息。你可以在`/etc/sudoers`文件中添加`Defaults env_keep += "HOME"`，或找到这一行并删除注释符号，以修复这个问题。
 
 ## 可以设定的选项
 
