--- a/简介.md
+++ b/简介.md
@@ -1,10 +1,10 @@
-# clitheme简介
+# CLItheme简介
 
-`clitheme`允许你通过输出替换规则来自定义任何命令行应用程序的终端输出。通过编写**主题定义文件**，你可以给你最喜爱的应用程序添加你想要的风格和个性。无论是把它们变得活泼可爱，模拟二次元角色的语句，甚至只是添加多语言支持，`clitheme`允许你自由发挥你的想象，把你的命令行环境变成你想要的样子。
+CLItheme允许你通过输出替换规则来自定义任何命令行应用程序的终端输出。通过编写**主题定义文件**，你可以给你最喜爱的应用程序添加你想要的风格和个性。无论是把它们变得活泼可爱，模拟二次元角色的语句，甚至只是添加多语言支持，CLItheme允许你自由发挥你的想象，把你的命令行环境变成你想要的样子。
 
 ## 主要功能
 
-`clitheme`包含以下主要功能：
+CLItheme包含以下主要功能：
 
 - 对任何命令行应用程序的输出通过定义替换规则进行修改和自定义
 - 自定义Unix/Linux文档手册（manpage）
@@ -14,7 +14,7 @@
 
 ## 使用样例
 
-该使用样例会展示`clitheme`的主要功能之一：命令行输出替换功能。
+该使用样例会展示CLItheme的主要功能之一：命令行输出替换功能。
 
 比如说，你在使用`clang`编译器，它的错误提示输出是长这样的：
 
@@ -58,7 +58,7 @@ test.c:4:3: warning: incompatible pointer types assigning to 'char *' from 'int 
 {/substrules_section}
 ```
 
-相比之前是不是变可爱了很多？接下来，我们通过`clitheme`的命令行工具来应用一下这个主题：
+相比之前是不是变可爱了很多？接下来，我们通过CLItheme的命令行工具来应用一下这个主题：
 
 ```plaintext
 $ clitheme apply-theme clang-theme_clithemedef.txt
