--- a/自定义manpage文档/1. 编写定义文件.md
+++ b/自定义manpage文档/1. 编写定义文件.md
@@ -1,7 +1,7 @@
 # 主题定义文件中`manpage_section`
 
 本文章将介绍主题定义文件中的`manpage`段落语法。这个段落允许你添加自定义的Unix文档手册（`manpage`）
-文档，达到文档自定义的目的。使用`clitheme`命令行工具应用主题定义文件后，你可以使用`clitheme-man`来查看这些手册文档。
+文档，达到文档自定义的目的。使用CLItheme命令行工具应用主题定义文件后，你可以使用`clitheme-man`来查看这些手册文档。
 
 有关Unix/Linux文档手册的更多信息，请见[本文章](https://www.man7.org/linux/man-pages/man1/man.1.html)。
 
