--- a/附录：主题定义文件通用语法/多语言支持.md
+++ b/附录：主题定义文件通用语法/多语言支持.md
@@ -1,6 +1,6 @@
 # 多语言支持
 
-clitheme的核心设计理念之一是对多语言的支持。它可以自动检测当前的系统语言（locale），并且调用对应语言的字符串定义。你可以为一个字符串定义添加不同语言的版本，甚至在主题定义文件内包含你的应用程序中的所有语言的提示信息和字符串。
+CLItheme的核心设计理念之一是对多语言的支持。它可以自动检测当前的系统语言（locale），并且调用对应语言的字符串定义。你可以为一个字符串定义添加不同语言的版本，甚至在主题定义文件内包含你的应用程序中的所有语言的提示信息和字符串。
 
 ## 语言名称格式
 
@@ -22,7 +22,7 @@ LC_ALL=
 
 ## 主题定义文件：为字符串定义添加多个语言版本
 
-你可以为一个字符串定义和命令行输出替换规则添加多个语言版本。`clitheme`会根据系统语言或者应用程序的语言设定自动选择相应的定义。
+你可以为一个字符串定义和命令行输出替换规则添加多个语言版本。CLItheme会根据系统语言或者应用程序的语言设定自动选择相应的定义。
 
 关于更多信息，请参考[**应用程序和字符串定义API/编写主题定义文件/基本用法**](../应用程序和字符串定义API/编写主题定义文件/基本用法.md)中的**使用`entry`段落**。
 
@@ -30,7 +30,7 @@ LC_ALL=
 
 在多行内容段落段落下，你可以同时定义多个语言，省去重复复制粘贴内容的过程。
 
-**注意：** 目前`clitheme`的自动语言检测不完全支持Windows系统，所以请务必定义`default`语言条目以确保主题定义在Windows系统下生效。
+**注意：** 目前CLItheme的自动语言检测不完全支持Windows系统，所以请务必定义`default`语言条目以确保主题定义在Windows系统下生效。
 
 ```plaintext
 {entries_section}
@@ -65,7 +65,7 @@ LC_ALL=
 
 创建`FetchDescriptor`时，你可以指定以下参数：
 
-- `lang`：指定了抓取字符串时应该使用的语言；该参数会覆盖`clitheme`自动检测到的系统语言。
+- `lang`：指定了抓取字符串时应该使用的语言；该参数会覆盖CLItheme自动检测到的系统语言。
     - 你可以指定多个语言；只要用空格分开即可（如`en_US zh_CN`）。获取字符串时会按照顺序依次尝试获取对应语言的字符串定义。
 - `disable_lang`：如果设置为`True`，将会禁用自动语言检测，并且调用功能时将会永远使用当前主题定义中的`default`条目。
 
@@ -87,13 +87,13 @@ f4=frontend.FetchDescriptor(disable_lang=True)
 
 ## 技术信息：自动语言检测的原理
 
-`clitheme`的自动语言检测的工作方法是读取当前系统中的环境变量信息，并且根据这些信息选择目标语言。
+CLItheme的自动语言检测的工作方法是读取当前系统中的环境变量信息，并且根据这些信息选择目标语言。
 
 以下环境变量信息将通过这个顺序被读取，并且会选择可用性最优先的环境变量作为目标语言：
 
 - `$LANGUAGE`（多个语言将会被顺序读取，按照该顺序进行字符串定义获取操作）
     - `en_US`和`en`将会被忽略（详细请见[本文章](https://wiki.archlinuxcn.org/wiki/Locale#LANGUAGE：后备区域设置)）
-    - 如果变量中包含的`C`或`C.<编码>`，`clitheme`也会同时处理`en_US`、`en_US.<编码>`、`en`、`en.<编码>`等语言
+    - 如果变量中包含的`C`或`C.<编码>`，CLItheme也会同时处理`en_US`、`en_US.<编码>`、`en`、`en.<编码>`等语言
     - `$LANG`设定为`C`时，**该变量将不会被读取**
 - `$LC_ALL`
 - `$LANG`
