--- a/附录：主题定义文件通用语法/指定最低支持的版本.md
+++ b/附录：主题定义文件通用语法/指定最低支持的版本.md
@@ -16,5 +16,5 @@
 a.b[-betaN]
 ```
 
-**注意：** 不支持带有bugfix版本信息的版本格式（`a.b.X`）。这是为了更好的兼容未来可能发布的其他`clitheme`变种（bugfix信息不一致）。
+**注意：** 不支持带有bugfix版本信息的版本格式（`a.b.X`）。这是为了更好的兼容未来可能发布的其他CLItheme变种（bugfix信息不一致）。
 **注意：** 不支持指定带有`-devYYYYMMDD`后缀的版本号。这些版本包含了beta版本发行号码信息；你可以使用最新的beta版本号码代替。
