--- a/命令行输出替换/1. 编写定义文件.md
+++ b/命令行输出替换/1. 编写定义文件.md
@@ -1,6 +1,6 @@
 # 编写定义文件（命令行输出替换）
 
-`clitheme`允许你通过替换规则和定义来自定义任何命令行应用程序的输出。本文章将介绍如何编写**主题定义文件**和这些替换规则。
+CLItheme允许你通过替换规则和定义来自定义任何命令行应用程序的输出。本文章将介绍如何编写**主题定义文件**和这些替换规则。
 
 ## 编写`header`段落
 
@@ -49,7 +49,7 @@
 ```
 
 - 在`[subst_string]`之后输入要匹配/查找的文本内容；在`[subst_regex]`之后输入要匹配的正则表达式。
-    - `clitheme`用的是Python内置的的正则表达式引擎，所以你必须使用Python的正则表达式语法。有关更多信息，请见[本文章](https://docs.python.org/zh-cn/3/howto/regex.html)。
+    - CLItheme用的是Python内置的的正则表达式引擎，所以你必须使用Python的正则表达式语法。有关更多信息，请见[本文章](https://docs.python.org/zh-cn/3/howto/regex.html)。
     - 你也可以使用`[substitute_string]`和`[substitute_regex]`语法
 - 使用以`[locale]`开头的内容段落输入要替换的内容
     - 在`[locale]`之后可以定义系统语言（locale）：当前的系统语言设定符合这个定义时才会执行替换；如不需要限制系统语言，请使用`default`。
@@ -194,7 +194,7 @@ bash-3.2$
 - `normalcmdmatch`：默认匹配机制；**用于重置/取消设定之前的设置**
 - `foregroundonly`：你也可以在限制条件中指定该选项，以应用于适用的替换规则。当取消设定或者重新设定新的限制条件时，该选项将会还原到之前的设定，**即使中途更改了该选项的设定**。
 
-**注意：** 无论选择了哪个匹配选项，如果用户输入的命令中第一个词语包含路径（指定可执行文件），`clitheme`会永远检查并尝试匹配程序名称。比如说，如果用户输入了`/usr/bin/python3 test.py`，`python3 test.py`也会被尝试匹配。
+**注意：** 无论选择了哪个匹配选项，如果用户输入的命令中第一个词语包含路径（指定可执行文件），CLItheme会永远检查并尝试匹配程序名称。比如说，如果用户输入了`/usr/bin/python3 test.py`，`python3 test.py`也会被尝试匹配。
 
 #### 样例：
 
