--- a/命令行输出替换/3. 样例教程.md
+++ b/命令行输出替换/3. 样例教程.md
@@ -46,7 +46,7 @@ test.c:4:3: warning: incompatible pointer types assigning to 'char *' from 'int 
 
 ### 为输出编写正则表达式
 
-我们可以为这些输出编写正则表达式定义。如需了解正则表达式和Python的正则表达式语法（因为`clitheme`用的是Python内置的正则表达式引擎），你可以参考[Python官方文档中的这篇文章](https://docs.python.org/zh-cn/3/howto/regex.html)。
+我们可以为这些输出编写正则表达式定义。如需了解正则表达式和Python的正则表达式语法（因为CLItheme用的是Python内置的正则表达式引擎），你可以参考[Python官方文档中的这篇文章](https://docs.python.org/zh-cn/3/howto/regex.html)。
 
 为了防止不小心替换无关的内容输出，我们在这个样例中会从行的开头开始匹配内容（平时写匹配规则时不需要都这样子做），包括前面的文件和行数信息（如`test.c:1:1:`）。但是，我们不需要匹配行中的所有内容，所以我们不需要考虑行的结尾中的无关内容。
 
@@ -113,7 +113,7 @@ test.c:4:3: warning: incompatible pointer types assigning to 'char *' from 'int 
 
 ## 3. 应用主题
 
-在终端中执行`clitheme apply-theme <文件名>`以应用这些定义，并且运行`clitheme-exec clang test.c`以看到效果。你也可以使用`python3 -m clitheme`来执行`clitheme`、使用`python3 -m clitheme.exec`来执行`clitheme-exec`，如果之前的命令无法使用。
+在终端中执行`clitheme apply-theme <文件名>`以应用这些定义，并且运行`clitheme-exec clang test.c`以看到效果。你也可以使用`python3 -m clitheme`来执行CLItheme、使用`python3 -m clitheme.exec`来执行`clitheme-exec`，如果之前的命令无法使用。
 
 ```plaintext
 $ clitheme-exec clang test.c
