--- a/应用程序和字符串定义API/编写主题定义文件/基本用法.md
+++ b/应用程序和字符串定义API/编写主题定义文件/基本用法.md
@@ -6,7 +6,7 @@
 
 ## 文件扩展名
 
-虽然`clitheme`在文件扩展名上没有要求，但是最好将文件的扩展名定义为`.clithemedef.txt`。这样子你可以更好的辨识文件，并且使用`.txt`会确保该文件会被系统使用正确的应用程序（如文本编辑器）打开。
+虽然CLItheme在文件扩展名上没有要求，但是最好将文件的扩展名定义为`.clithemedef.txt`。这样子你可以更好的辨识文件，并且使用`.txt`会确保该文件会被系统使用正确的应用程序（如文本编辑器）打开。
 
 ## 注释
 
@@ -71,7 +71,7 @@
 
 要定义一个字符串，请使用`entry`定义，并且包括该字符串的路径名称，如`[entry] com.example example-app text-one`。如需获取路径名称，请参考相关应用程序的帮助信息或文档。
 
-`clitheme`的核心设计理念之一是多语言支持，所以字符串本体需要在`locale`行中定义。`locale`行的格式为：`locale:<default|语言> <字符串>`。当前的系统语言会被自动获取，并且会使用对应的定义。
+CLItheme的核心设计理念之一是多语言支持，所以字符串本体需要在`locale`行中定义。`locale`行的格式为：`locale:<default|语言> <字符串>`。当前的系统语言会被自动获取，并且会使用对应的定义。
 
 `locale`中的语言必须是系统语言格式，如`zh_CN`和`en_US`。你可以在命令行中使用`locale`命令查看当前系统语言。（详见文章[多语言支持](../../附录：主题定义文件通用语法/多语言支持.md)）
 
