Grammar fixes and some content updates

--- a/关于版本的重要信息.md
+++ b/关于版本的重要信息.md
@@ -7,7 +7,7 @@ CLItheme采用了以下的版本命名方式：
 
 - `a.b`代表了主要版本号。当有新的功能加入CLItheme时，该版本号的`b`值会变更。比如说：`1.0`、`1.1`、`2.0`
 - `.X`代表了该版本的发行版次。当小改进和问题修复被加入时，该版本号的`X`值会变更。比如说：`1.0.1`，`2.0.1`
-- `dev`代表了正在开发的下一个版本。当新的改动被同步到仓库时，我会把当天的日期添加在版本号的后面。比如说：`dev20231202`
+- `dev`代表了正在开发的下一个版本。当新的改动被同步到仓库时，当天的日期会添加在版本号的后面。比如说：`dev20231202`
 - `beta`代表了测试版本；一般会在有复杂功能的功能更新前发布测试版本以更好的改进这些功能。
 
 这个版本信息会被储存在仓库中的`src/clitheme/_version.py`中，并且会在新的发行版中包括此版本号。
@@ -16,6 +16,6 @@ CLItheme采用了以下的版本命名方式：
 
 ## 代码仓库分支
 
-当CLItheme的下一个版本处于开发状态时，我会新建一个分支用于同步下一个版本的开发进度。这样子，当前稳定版本的内容不会收到影响。这个分支的命名格式通常为`a.b_dev`或`a.b.X_dev`。
+当CLItheme的下一个版本处于开发状态时，会使用另一个分支用于同步下一个版本的开发进度。这个分支的命名格式通常为`a.b_dev`或`a.b.X_dev`。
 
-当下一个主要版本开发完成后，我会把这个分支融合到`latest-STABLE`分支上，并且创建一个新的发行版。`latest-STABLE`是这个仓库的主要分支，包含最新稳定版本的代码内容。
+当下一个主要版本开发完成后，我会把这个分支合并到`latest-STABLE`分支上，并且创建一个新的发行版。`latest-STABLE`包含最新稳定版本的代码内容。
