--- a/命令行输出替换/1. 编写定义文件.md
+++ b/命令行输出替换/1. 编写定义文件.md
@@ -194,7 +194,7 @@ bash-3.2$
 - `normalcmdmatch`：默认匹配机制；**用于重置/取消设定之前的设置**
 - `foregroundonly`：你也可以在限制条件中指定该选项，以应用于适用的替换规则。当取消设定或者重新设定新的限制条件时，该选项将会还原到之前的设定，**即使中途更改了该选项的设定**。
 
-**注意：** 无论选择了哪个匹配选项，如果用户输入的命令中第一个词语包含路径（指定可执行文件），CLItheme会永远检查并尝试匹配程序名称。比如说，如果用户输入了`/usr/bin/python3 test.py`，`python3 test.py`也会被尝试匹配。
+**注意：** 无论选择了哪个匹配选项，如果用户输入的命令中第一个词语包含路径（指定可执行文件），CLItheme会检查并尝试匹配程序名称。比如说，如果用户输入了`/usr/bin/python3 test.py`，`python3 test.py`也会被尝试匹配。
 
 #### 样例：
 
