--- a/命令行输出替换/3. 样例教程.md
+++ b/命令行输出替换/3. 样例教程.md
@@ -4,7 +4,7 @@
 
 浏览本文章前，请先阅读[编写定义文件](1.%20编写定义文件.md)和[使用clitheme-exec](2.%20使用clitheme-exec.md)。
 
-本文章中的部分内容来自于`kawaii-gcc`项目。项目地址：https://github.com/Bill-Haku/kawaii-gcc
+本文章中的部分内容源自`kawaii-gcc`项目。项目地址：https://github.com/Bill-Haku/kawaii-gcc
 
 ## 1. 获取应用程序的输出
 
@@ -48,7 +48,7 @@ test.c:4:3: warning: incompatible pointer types assigning to 'char *' from 'int 
 
 我们可以为这些输出编写正则表达式定义。如需了解正则表达式和Python的正则表达式语法（因为CLItheme用的是Python内置的正则表达式引擎），你可以参考[Python官方文档中的这篇文章](https://docs.python.org/zh-cn/3/howto/regex.html)。
 
-为了防止不小心替换无关的内容输出，我们在这个样例中会从行的开头开始匹配内容（平时写匹配规则时不需要都这样子做），包括前面的文件和行数信息（如`test.c:1:1:`）。但是，我们不需要匹配行中的所有内容，所以我们不需要考虑行的结尾中的无关内容。
+为了防止不小心替换无关的内容输出，我们在这个样例中会从行的开头开始匹配内容（平时写匹配规则时不需要都这样子做），包括前面的文件和行数信息（如`test.c:1:1:`）。但是，这里不需要匹配行中的所有内容，所以无需考虑行结尾的无关内容。
 
 我们拿这行输出举例（**这篇文档中的`{{ESC}}`会在编写定义文件时被替换成ASCII Escape字符**）：
 
@@ -113,7 +113,7 @@ test.c:4:3: warning: incompatible pointer types assigning to 'char *' from 'int 
 
 ## 3. 应用主题
 
-在终端中执行`clitheme apply-theme <文件名>`以应用这些定义，并且运行`clitheme-exec clang test.c`以看到效果。你也可以使用`python3 -m clitheme`来执行CLItheme、使用`python3 -m clitheme.exec`来执行`clitheme-exec`，如果之前的命令无法使用。
+在终端中执行`clitheme apply-theme <文件名>`以应用这些定义，并且运行`clitheme-exec clang test.c`以看到效果。如果之前的命令无法使用，你也可以使用`python3 -m clitheme`来执行CLItheme和`python3 -m clitheme.exec`来执行`clitheme-exec`。
 
 ```plaintext
 $ clitheme-exec clang test.c
