Update info on substrules match order

--- a/命令行输出替换/1. 编写定义文件.md
+++ b/命令行输出替换/1. 编写定义文件.md
@@ -218,11 +218,7 @@ set_options normalcmdmatch
 
 ## 注意事项
 
-- 主题定义文件中的匹配规则会通过以下顺序依次执行；**每一部分根据文件中的*定义顺序*执行**：
-    1. 带有命令限制条件并且带有`exactcmdmatch`匹配机制设定的匹配规则
-    2. 带有命令限制条件的匹配规则
-        - 命令语句最多的将会被优先执行（从多到少）
-    3. 没有命令限制条件的匹配规则
+- 主题定义文件中的匹配规则会根据文件中定义的顺序依次执行；如果设定了多个定义文件，则根据文件列表中的顺序处理文件
     - **这意味着你可以通过多个替换规则来更改/替换一行的输出**
 - 如果执行替换规则的时间超过**0.4秒**，则会视为超时，并且会输出未处理过的内容
 - 不需要匹配一行中的所有内容；你可以仅匹配和替换一行中的部分内容
